{
  "version": 4,
  "terraform_version": "1.6.6",
  "serial": 1069,
  "lineage": "5fb284f2-dc0d-0325-8351-4b1949b32326",
  "resources": [
    {
      "mode": "managed",
      "type": "google_compute_backend_service",
      "name": "challenge_service",
      "provider": "provider[\"registry.terraform.io/hashicorp/google-beta\"]",
      "instances": [
        {
          "index_key": "challenge00",
          "schema_version": 1,
          "attributes": {
            "affinity_cookie_ttl_sec": 0,
            "backend": [
              {
                "balancing_mode": "UTILIZATION",
                "capacity_scaler": 1,
                "group": "https://www.googleapis.com/compute/v1/projects/potluck-ctf/zones/europe-west3-b/instanceGroups/challenge00-group",
                "max_connections": 0,
                "max_connections_per_endpoint": 0,
                "max_connections_per_instance": 0,
                "max_rate": 0,
                "max_rate_per_endpoint": 0,
                "max_rate_per_instance": 0,
                "max_utilization": 1
              }
            ],
            "connection_draining_timeout_sec": 300,
            "creation_timestamp": "2023-12-26T02:11:43.610-08:00",
            "enable_cdn": false,
            "fingerprint": "TmQIjxNo8hU=",
            "generated_id": 8944940670383495216,
            "health_checks": [
              "https://www.googleapis.com/compute/v1/projects/potluck-ctf/global/healthChecks/challenge00-health-check"
            ],
            "id": "projects/potluck-ctf/global/backendServices/challenge00-backend-service",
            "load_balancing_scheme": "EXTERNAL",
            "name": "challenge00-backend-service",
            "port_name": "challenge",
            "project": "potluck-ctf",
            "protocol": "TCP",
            "self_link": "https://www.googleapis.com/compute/v1/projects/potluck-ctf/global/backendServices/challenge00-backend-service",
            "session_affinity": "CLIENT_IP",
            "timeout_sec": 120
          },
          "dependencies": [
            "google_compute_health_check.challenge_healthcheck",
            "google_compute_instance.challenge_server",
            "google_compute_instance_group.challenge_group",
            "google_compute_network.potluckctf_network",
            "google_compute_subnetwork.potluckctf_challenge_subnet",
            "google_service_account.challenge_service_account"
          ]
        },
        {
          "index_key": "challenge01",
          "schema_version": 1,
          "attributes": {
            "affinity_cookie_ttl_sec": 0,
            "backend": [
              {
                "balancing_mode": "UTILIZATION",
                "capacity_scaler": 1,
                "group": "https://www.googleapis.com/compute/v1/projects/potluck-ctf/zones/europe-west3-b/instanceGroups/challenge01-group",
                "max_connections": 0,
                "max_connections_per_endpoint": 0,
                "max_connections_per_instance": 0,
                "max_rate": 0,
                "max_rate_per_endpoint": 0,
                "max_rate_per_instance": 0,
                "max_utilization": 1
              }
            ],
            "connection_draining_timeout_sec": 300,
            "creation_timestamp": "2023-12-26T02:11:09.589-08:00",
            "enable_cdn": false,
            "fingerprint": "9UMchSiMsyM=",
            "generated_id": 9023154258226649170,
            "health_checks": [
              "https://www.googleapis.com/compute/v1/projects/potluck-ctf/global/healthChecks/challenge01-health-check"
            ],
            "id": "projects/potluck-ctf/global/backendServices/challenge01-backend-service",
            "load_balancing_scheme": "EXTERNAL",
            "name": "challenge01-backend-service",
            "port_name": "challenge",
            "project": "potluck-ctf",
            "protocol": "TCP",
            "self_link": "https://www.googleapis.com/compute/v1/projects/potluck-ctf/global/backendServices/challenge01-backend-service",
            "session_affinity": "CLIENT_IP",
            "timeout_sec": 120
          },
          "dependencies": [
            "google_compute_health_check.challenge_healthcheck",
            "google_compute_instance.challenge_server",
            "google_compute_instance_group.challenge_group",
            "google_compute_network.potluckctf_network",
            "google_compute_subnetwork.potluckctf_challenge_subnet",
            "google_service_account.challenge_service_account"
          ]
        },
        {
          "index_key": "challenge03",
          "schema_version": 1,
          "attributes": {
            "affinity_cookie_ttl_sec": 0,
            "backend": [
              {
                "balancing_mode": "UTILIZATION",
                "capacity_scaler": 1,
                "group": "https://www.googleapis.com/compute/v1/projects/potluck-ctf/zones/europe-west3-b/instanceGroups/challenge03-group",
                "max_connections": 0,
                "max_connections_per_endpoint": 0,
                "max_connections_per_instance": 0,
                "max_rate": 0,
                "max_rate_per_endpoint": 0,
                "max_rate_per_instance": 0,
                "max_utilization": 1
              }
            ],
            "connection_draining_timeout_sec": 300,
            "creation_timestamp": "2023-12-26T02:11:56.003-08:00",
            "enable_cdn": false,
            "fingerprint": "7epu9DmaL1I=",
            "generated_id": 7214048135468226564,
            "health_checks": [
              "https://www.googleapis.com/compute/v1/projects/potluck-ctf/global/healthChecks/challenge03-health-check"
            ],
            "id": "projects/potluck-ctf/global/backendServices/challenge03-backend-service",
            "load_balancing_scheme": "EXTERNAL",
            "name": "challenge03-backend-service",
            "port_name": "challenge",
            "project": "potluck-ctf",
            "protocol": "TCP",
            "self_link": "https://www.googleapis.com/compute/v1/projects/potluck-ctf/global/backendServices/challenge03-backend-service",
            "session_affinity": "CLIENT_IP",
            "timeout_sec": 120
          },
          "dependencies": [
            "google_compute_health_check.challenge_healthcheck",
            "google_compute_instance.challenge_server",
            "google_compute_instance_group.challenge_group",
            "google_compute_network.potluckctf_network",
            "google_compute_subnetwork.potluckctf_challenge_subnet",
            "google_service_account.challenge_service_account"
          ]
        },
        {
          "index_key": "challenge05",
          "schema_version": 1,
          "attributes": {
            "affinity_cookie_ttl_sec": 0,
            "backend": [
              {
                "balancing_mode": "UTILIZATION",
                "capacity_scaler": 1,
                "group": "https://www.googleapis.com/compute/v1/projects/potluck-ctf/zones/europe-west3-b/instanceGroups/challenge05-group",
                "max_connections": 0,
                "max_connections_per_endpoint": 0,
                "max_connections_per_instance": 0,
                "max_rate": 0,
                "max_rate_per_endpoint": 0,
                "max_rate_per_instance": 0,
                "max_utilization": 1
              }
            ],
            "connection_draining_timeout_sec": 300,
            "creation_timestamp": "2023-12-26T02:11:42.448-08:00",
            "enable_cdn": false,
            "fingerprint": "2NytNre-gvc=",
            "generated_id": 2781730461106772017,
            "health_checks": [
              "https://www.googleapis.com/compute/v1/projects/potluck-ctf/global/healthChecks/challenge05-health-check"
            ],
            "id": "projects/potluck-ctf/global/backendServices/challenge05-backend-service",
            "load_balancing_scheme": "EXTERNAL",
            "name": "challenge05-backend-service",
            "port_name": "challenge",
            "project": "potluck-ctf",
            "protocol": "TCP",
            "self_link": "https://www.googleapis.com/compute/v1/projects/potluck-ctf/global/backendServices/challenge05-backend-service",
            "session_affinity": "CLIENT_IP",
            "timeout_sec": 120
          },
          "dependencies": [
            "google_compute_health_check.challenge_healthcheck",
            "google_compute_instance.challenge_server",
            "google_compute_instance_group.challenge_group",
            "google_compute_network.potluckctf_network",
            "google_compute_subnetwork.potluckctf_challenge_subnet",
            "google_service_account.challenge_service_account"
          ]
        },
        {
          "index_key": "challenge06",
          "schema_version": 1,
          "attributes": {
            "affinity_cookie_ttl_sec": 0,
            "backend": [
              {
                "balancing_mode": "UTILIZATION",
                "capacity_scaler": 1,
                "group": "https://www.googleapis.com/compute/v1/projects/potluck-ctf/zones/europe-west3-b/instanceGroups/challenge06-group",
                "max_connections": 0,
                "max_connections_per_endpoint": 0,
                "max_connections_per_instance": 0,
                "max_rate": 0,
                "max_rate_per_endpoint": 0,
                "max_rate_per_instance": 0,
                "max_utilization": 1
              }
            ],
            "connection_draining_timeout_sec": 300,
            "creation_timestamp": "2023-12-26T02:11:56.594-08:00",
            "enable_cdn": false,
            "fingerprint": "C8JmUU4hth4=",
            "generated_id": 3158817113542957059,
            "health_checks": [
              "https://www.googleapis.com/compute/v1/projects/potluck-ctf/global/healthChecks/challenge06-health-check"
            ],
            "id": "projects/potluck-ctf/global/backendServices/challenge06-backend-service",
            "load_balancing_scheme": "EXTERNAL",
            "name": "challenge06-backend-service",
            "port_name": "challenge",
            "project": "potluck-ctf",
            "protocol": "TCP",
            "self_link": "https://www.googleapis.com/compute/v1/projects/potluck-ctf/global/backendServices/challenge06-backend-service",
            "session_affinity": "CLIENT_IP",
            "timeout_sec": 120
          },
          "dependencies": [
            "google_compute_health_check.challenge_healthcheck",
            "google_compute_instance.challenge_server",
            "google_compute_instance_group.challenge_group",
            "google_compute_network.potluckctf_network",
            "google_compute_subnetwork.potluckctf_challenge_subnet",
            "google_service_account.challenge_service_account"
          ]
        },
        {
          "index_key": "challenge07",
          "schema_version": 1,
          "attributes": {
            "affinity_cookie_ttl_sec": 0,
            "backend": [
              {
                "balancing_mode": "UTILIZATION",
                "capacity_scaler": 1,
                "group": "https://www.googleapis.com/compute/v1/projects/potluck-ctf/zones/europe-west3-b/instanceGroups/challenge07-group",
                "max_connections": 0,
                "max_connections_per_endpoint": 0,
                "max_connections_per_instance": 0,
                "max_rate": 0,
                "max_rate_per_endpoint": 0,
                "max_rate_per_instance": 0,
                "max_utilization": 1
              }
            ],
            "connection_draining_timeout_sec": 300,
            "creation_timestamp": "2023-12-26T02:11:08.925-08:00",
            "enable_cdn": false,
            "fingerprint": "AGEjnmFefk4=",
            "generated_id": 600005383907907667,
            "health_checks": [
              "https://www.googleapis.com/compute/v1/projects/potluck-ctf/global/healthChecks/challenge07-health-check"
            ],
            "id": "projects/potluck-ctf/global/backendServices/challenge07-backend-service",
            "load_balancing_scheme": "EXTERNAL",
            "name": "challenge07-backend-service",
            "port_name": "challenge",
            "project": "potluck-ctf",
            "protocol": "TCP",
            "self_link": "https://www.googleapis.com/compute/v1/projects/potluck-ctf/global/backendServices/challenge07-backend-service",
            "session_affinity": "CLIENT_IP",
            "timeout_sec": 120
          },
          "dependencies": [
            "google_compute_health_check.challenge_healthcheck",
            "google_compute_instance.challenge_server",
            "google_compute_instance_group.challenge_group",
            "google_compute_network.potluckctf_network",
            "google_compute_subnetwork.potluckctf_challenge_subnet",
            "google_service_account.challenge_service_account"
          ]
        },
        {
          "index_key": "challenge09",
          "schema_version": 1,
          "attributes": {
            "affinity_cookie_ttl_sec": 0,
            "backend": [
              {
                "balancing_mode": "UTILIZATION",
                "capacity_scaler": 1,
                "group": "https://www.googleapis.com/compute/v1/projects/potluck-ctf/zones/europe-west3-b/instanceGroups/challenge09-group",
                "max_connections": 0,
                "max_connections_per_endpoint": 0,
                "max_connections_per_instance": 0,
                "max_rate": 0,
                "max_rate_per_endpoint": 0,
                "max_rate_per_instance": 0,
                "max_utilization": 1
              }
            ],
            "connection_draining_timeout_sec": 300,
            "creation_timestamp": "2023-12-26T02:11:42.374-08:00",
            "enable_cdn": false,
            "fingerprint": "DBvki3lx6kI=",
            "generated_id": 4648371600690190385,
            "health_checks": [
              "https://www.googleapis.com/compute/v1/projects/potluck-ctf/global/healthChecks/challenge09-health-check"
            ],
            "id": "projects/potluck-ctf/global/backendServices/challenge09-backend-service",
            "load_balancing_scheme": "EXTERNAL",
            "log_config": [
              {
                "enable": false,
                "sample_rate": 0
              }
            ],
            "name": "challenge09-backend-service",
            "port_name": "challenge",
            "project": "potluck-ctf",
            "protocol": "TCP",
            "self_link": "https://www.googleapis.com/compute/v1/projects/potluck-ctf/global/backendServices/challenge09-backend-service",
            "session_affinity": "CLIENT_IP",
            "timeout_sec": 120
          },
          "dependencies": [
            "google_compute_health_check.challenge_healthcheck",
            "google_compute_instance.challenge_server",
            "google_compute_instance_group.challenge_group",
            "google_compute_network.potluckctf_network",
            "google_compute_subnetwork.potluckctf_challenge_subnet",
            "google_service_account.challenge_service_account"
          ]
        },
        {
          "index_key": "challenge11",
          "schema_version": 1,
          "attributes": {
            "affinity_cookie_ttl_sec": 0,
            "backend": [
              {
                "balancing_mode": "UTILIZATION",
                "capacity_scaler": 1,
                "group": "https://www.googleapis.com/compute/v1/projects/potluck-ctf/zones/europe-west3-b/instanceGroups/challenge11-group",
                "max_connections": 0,
                "max_connections_per_endpoint": 0,
                "max_connections_per_instance": 0,
                "max_rate": 0,
                "max_rate_per_endpoint": 0,
                "max_rate_per_instance": 0,
                "max_utilization": 1
              }
            ],
            "connection_draining_timeout_sec": 300,
            "creation_timestamp": "2023-12-26T02:11:09.614-08:00",
            "enable_cdn": false,
            "fingerprint": "wPHLOeOtMS0=",
            "generated_id": 3817625372596836434,
            "health_checks": [
              "https://www.googleapis.com/compute/v1/projects/potluck-ctf/global/healthChecks/challenge11-health-check"
            ],
            "id": "projects/potluck-ctf/global/backendServices/challenge11-backend-service",
            "load_balancing_scheme": "EXTERNAL",
            "name": "challenge11-backend-service",
            "port_name": "challenge",
            "project": "potluck-ctf",
            "protocol": "TCP",
            "self_link": "https://www.googleapis.com/compute/v1/projects/potluck-ctf/global/backendServices/challenge11-backend-service",
            "session_affinity": "CLIENT_IP",
            "timeout_sec": 120
          },
          "dependencies": [
            "google_compute_health_check.challenge_healthcheck",
            "google_compute_instance.challenge_server",
            "google_compute_instance_group.challenge_group",
            "google_compute_network.potluckctf_network",
            "google_compute_subnetwork.potluckctf_challenge_subnet",
            "google_service_account.challenge_service_account"
          ]
        },
        {
          "index_key": "challenge12",
          "schema_version": 1,
          "attributes": {
            "affinity_cookie_ttl_sec": 0,
            "backend": [
              {
                "balancing_mode": "UTILIZATION",
                "capacity_scaler": 1,
                "group": "https://www.googleapis.com/compute/v1/projects/potluck-ctf/zones/europe-west3-b/instanceGroups/challenge12-group",
                "max_connections": 0,
                "max_connections_per_endpoint": 0,
                "max_connections_per_instance": 0,
                "max_rate": 0,
                "max_rate_per_endpoint": 0,
                "max_rate_per_instance": 0,
                "max_utilization": 1
              }
            ],
            "connection_draining_timeout_sec": 300,
            "creation_timestamp": "2023-12-26T02:11:09.415-08:00",
            "enable_cdn": false,
            "fingerprint": "f6QhDtlDKL0=",
            "generated_id": 281793855402481746,
            "health_checks": [
              "https://www.googleapis.com/compute/v1/projects/potluck-ctf/global/healthChecks/challenge12-health-check"
            ],
            "id": "projects/potluck-ctf/global/backendServices/challenge12-backend-service",
            "load_balancing_scheme": "EXTERNAL",
            "name": "challenge12-backend-service",
            "port_name": "challenge",
            "project": "potluck-ctf",
            "protocol": "TCP",
            "self_link": "https://www.googleapis.com/compute/v1/projects/potluck-ctf/global/backendServices/challenge12-backend-service",
            "session_affinity": "CLIENT_IP",
            "timeout_sec": 120
          },
          "dependencies": [
            "google_compute_health_check.challenge_healthcheck",
            "google_compute_instance.challenge_server",
            "google_compute_instance_group.challenge_group",
            "google_compute_network.potluckctf_network",
            "google_compute_subnetwork.potluckctf_challenge_subnet",
            "google_service_account.challenge_service_account"
          ]
        },
        {
          "index_key": "challenge13",
          "schema_version": 1,
          "attributes": {
            "affinity_cookie_ttl_sec": 0,
            "backend": [
              {
                "balancing_mode": "UTILIZATION",
                "capacity_scaler": 1,
                "group": "https://www.googleapis.com/compute/v1/projects/potluck-ctf/zones/europe-west3-b/instanceGroups/challenge13-group",
                "max_connections": 0,
                "max_connections_per_endpoint": 0,
                "max_connections_per_instance": 0,
                "max_rate": 0,
                "max_rate_per_endpoint": 0,
                "max_rate_per_instance": 0,
                "max_utilization": 1
              }
            ],
            "connection_draining_timeout_sec": 300,
            "creation_timestamp": "2023-12-26T02:11:42.366-08:00",
            "enable_cdn": false,
            "fingerprint": "bOq6wQ3KMu8=",
            "generated_id": 6467237413858514993,
            "health_checks": [
              "https://www.googleapis.com/compute/v1/projects/potluck-ctf/global/healthChecks/challenge13-health-check"
            ],
            "id": "projects/potluck-ctf/global/backendServices/challenge13-backend-service",
            "load_balancing_scheme": "EXTERNAL",
            "name": "challenge13-backend-service",
            "port_name": "challenge",
            "project": "potluck-ctf",
            "protocol": "TCP",
            "self_link": "https://www.googleapis.com/compute/v1/projects/potluck-ctf/global/backendServices/challenge13-backend-service",
            "session_affinity": "CLIENT_IP",
            "timeout_sec": 120
          },
          "dependencies": [
            "google_compute_health_check.challenge_healthcheck",
            "google_compute_instance.challenge_server",
            "google_compute_instance_group.challenge_group",
            "google_compute_network.potluckctf_network",
            "google_compute_subnetwork.potluckctf_challenge_subnet",
            "google_service_account.challenge_service_account"
          ]
        },
        {
          "index_key": "challenge15",
          "schema_version": 1,
          "attributes": {
            "affinity_cookie_ttl_sec": 0,
            "backend": [
              {
                "balancing_mode": "UTILIZATION",
                "capacity_scaler": 1,
                "group": "https://www.googleapis.com/compute/v1/projects/potluck-ctf/zones/europe-west3-b/instanceGroups/challenge15-group",
                "max_connections": 0,
                "max_connections_per_endpoint": 0,
                "max_connections_per_instance": 0,
                "max_rate": 0,
                "max_rate_per_endpoint": 0,
                "max_rate_per_instance": 0,
                "max_utilization": 1
              }
            ],
            "connection_draining_timeout_sec": 300,
            "creation_timestamp": "2023-12-26T02:11:33.510-08:00",
            "enable_cdn": false,
            "fingerprint": "aGGFKyChN5Y=",
            "generated_id": 2990952379817859130,
            "health_checks": [
              "https://www.googleapis.com/compute/v1/projects/potluck-ctf/global/healthChecks/challenge15-health-check"
            ],
            "id": "projects/potluck-ctf/global/backendServices/challenge15-backend-service",
            "load_balancing_scheme": "EXTERNAL",
            "name": "challenge15-backend-service",
            "port_name": "challenge",
            "project": "potluck-ctf",
            "protocol": "TCP",
            "self_link": "https://www.googleapis.com/compute/v1/projects/potluck-ctf/global/backendServices/challenge15-backend-service",
            "session_affinity": "CLIENT_IP",
            "timeout_sec": 120
          },
          "dependencies": [
            "google_compute_health_check.challenge_healthcheck",
            "google_compute_instance.challenge_server",
            "google_compute_instance_group.challenge_group",
            "google_compute_network.potluckctf_network",
            "google_compute_subnetwork.potluckctf_challenge_subnet",
            "google_service_account.challenge_service_account"
          ]
        },
        {
          "index_key": "challenge17",
          "schema_version": 1,
          "attributes": {
            "affinity_cookie_ttl_sec": 0,
            "backend": [
              {
                "balancing_mode": "UTILIZATION",
                "capacity_scaler": 1,
                "group": "https://www.googleapis.com/compute/v1/projects/potluck-ctf/zones/europe-west3-b/instanceGroups/challenge17-group",
                "max_connections": 0,
                "max_connections_per_endpoint": 0,
                "max_connections_per_instance": 0,
                "max_rate": 0,
                "max_rate_per_endpoint": 0,
                "max_rate_per_instance": 0,
                "max_utilization": 1
              }
            ],
            "connection_draining_timeout_sec": 300,
            "creation_timestamp": "2023-12-27T07:00:24.351-08:00",
            "enable_cdn": false,
            "fingerprint": "-xddbouBmEQ=",
            "generated_id": 5408840820811989735,
            "health_checks": [
              "https://www.googleapis.com/compute/v1/projects/potluck-ctf/global/healthChecks/challenge17-health-check"
            ],
            "id": "projects/potluck-ctf/global/backendServices/challenge17-backend-service",
            "load_balancing_scheme": "EXTERNAL",
            "name": "challenge17-backend-service",
            "port_name": "challenge",
            "project": "potluck-ctf",
            "protocol": "TCP",
            "self_link": "https://www.googleapis.com/compute/v1/projects/potluck-ctf/global/backendServices/challenge17-backend-service",
            "session_affinity": "CLIENT_IP",
            "timeout_sec": 120
          },
          "dependencies": [
            "google_compute_health_check.challenge_healthcheck",
            "google_compute_instance.challenge_server",
            "google_compute_instance_group.challenge_group",
            "google_compute_network.potluckctf_network",
            "google_compute_subnetwork.potluckctf_challenge_subnet",
            "google_service_account.challenge_service_account"
          ]
        },
        {
          "index_key": "challenge18",
          "schema_version": 1,
          "attributes": {
            "affinity_cookie_ttl_sec": 0,
            "backend": [
              {
                "balancing_mode": "UTILIZATION",
                "capacity_scaler": 1,
                "group": "https://www.googleapis.com/compute/v1/projects/potluck-ctf/zones/europe-west3-b/instanceGroups/challenge18-group",
                "max_connections": 0,
                "max_connections_per_endpoint": 0,
                "max_connections_per_instance": 0,
                "max_rate": 0,
                "max_rate_per_endpoint": 0,
                "max_rate_per_instance": 0,
                "max_utilization": 1
              }
            ],
            "connection_draining_timeout_sec": 300,
            "creation_timestamp": "2023-12-26T02:11:42.879-08:00",
            "enable_cdn": false,
            "fingerprint": "r54Tj9y93XU=",
            "generated_id": 1301328746835810353,
            "health_checks": [
              "https://www.googleapis.com/compute/v1/projects/potluck-ctf/global/healthChecks/challenge18-health-check"
            ],
            "id": "projects/potluck-ctf/global/backendServices/challenge18-backend-service",
            "load_balancing_scheme": "EXTERNAL",
            "name": "challenge18-backend-service",
            "port_name": "challenge",
            "project": "potluck-ctf",
            "protocol": "TCP",
            "self_link": "https://www.googleapis.com/compute/v1/projects/potluck-ctf/global/backendServices/challenge18-backend-service",
            "session_affinity": "CLIENT_IP",
            "timeout_sec": 120
          },
          "dependencies": [
            "google_compute_health_check.challenge_healthcheck",
            "google_compute_instance.challenge_server",
            "google_compute_instance_group.challenge_group",
            "google_compute_network.potluckctf_network",
            "google_compute_subnetwork.potluckctf_challenge_subnet",
            "google_service_account.challenge_service_account"
          ]
        },
        {
          "index_key": "challenge19",
          "schema_version": 1,
          "attributes": {
            "affinity_cookie_ttl_sec": 0,
            "backend": [
              {
                "balancing_mode": "UTILIZATION",
                "capacity_scaler": 1,
                "group": "https://www.googleapis.com/compute/v1/projects/potluck-ctf/zones/europe-west3-b/instanceGroups/challenge19-group",
                "max_connections": 0,
                "max_connections_per_endpoint": 0,
                "max_connections_per_instance": 0,
                "max_rate": 0,
                "max_rate_per_endpoint": 0,
                "max_rate_per_instance": 0,
                "max_utilization": 1
              }
            ],
            "connection_draining_timeout_sec": 300,
            "creation_timestamp": "2023-12-26T02:11:32.604-08:00",
            "enable_cdn": false,
            "fingerprint": "zhalpQucc0c=",
            "generated_id": 3937421399280785467,
            "health_checks": [
              "https://www.googleapis.com/compute/v1/projects/potluck-ctf/global/healthChecks/challenge19-health-check"
            ],
            "id": "projects/potluck-ctf/global/backendServices/challenge19-backend-service",
            "load_balancing_scheme": "EXTERNAL",
            "name": "challenge19-backend-service",
            "port_name": "challenge",
            "project": "potluck-ctf",
            "protocol": "TCP",
            "self_link": "https://www.googleapis.com/compute/v1/projects/potluck-ctf/global/backendServices/challenge19-backend-service",
            "session_affinity": "CLIENT_IP",
            "timeout_sec": 120
          },
          "dependencies": [
            "google_compute_health_check.challenge_healthcheck",
            "google_compute_instance.challenge_server",
            "google_compute_instance_group.challenge_group",
            "google_compute_network.potluckctf_network",
            "google_compute_subnetwork.potluckctf_challenge_subnet",
            "google_service_account.challenge_service_account"
          ]
        },
        {
          "index_key": "challenge21",
          "schema_version": 1,
          "attributes": {
            "affinity_cookie_ttl_sec": 0,
            "backend": [
              {
                "balancing_mode": "UTILIZATION",
                "capacity_scaler": 1,
                "group": "https://www.googleapis.com/compute/v1/projects/potluck-ctf/zones/europe-west3-b/instanceGroups/challenge21-group",
                "max_connections": 0,
                "max_connections_per_endpoint": 0,
                "max_connections_per_instance": 0,
                "max_rate": 0,
                "max_rate_per_endpoint": 0,
                "max_rate_per_instance": 0,
                "max_utilization": 1
              }
            ],
            "connection_draining_timeout_sec": 300,
            "creation_timestamp": "2023-12-26T02:11:09.464-08:00",
            "enable_cdn": false,
            "fingerprint": "bJ2CtXCkmlA=",
            "generated_id": 4435955484736297042,
            "health_checks": [
              "https://www.googleapis.com/compute/v1/projects/potluck-ctf/global/healthChecks/challenge21-health-check"
            ],
            "id": "projects/potluck-ctf/global/backendServices/challenge21-backend-service",
            "load_balancing_scheme": "EXTERNAL",
            "name": "challenge21-backend-service",
            "port_name": "challenge",
            "project": "potluck-ctf",
            "protocol": "TCP",
            "self_link": "https://www.googleapis.com/compute/v1/projects/potluck-ctf/global/backendServices/challenge21-backend-service",
            "session_affinity": "CLIENT_IP",
            "timeout_sec": 120
          },
          "dependencies": [
            "google_compute_health_check.challenge_healthcheck",
            "google_compute_instance.challenge_server",
            "google_compute_instance_group.challenge_group",
            "google_compute_network.potluckctf_network",
            "google_compute_subnetwork.potluckctf_challenge_subnet",
            "google_service_account.challenge_service_account"
          ]
        },
        {
          "index_key": "challenge22",
          "schema_version": 1,
          "attributes": {
            "affinity_cookie_ttl_sec": 0,
            "backend": [
              {
                "balancing_mode": "UTILIZATION",
                "capacity_scaler": 1,
                "group": "https://www.googleapis.com/compute/v1/projects/potluck-ctf/zones/europe-west3-b/instanceGroups/challenge22-group",
                "max_connections": 0,
                "max_connections_per_endpoint": 0,
                "max_connections_per_instance": 0,
                "max_rate": 0,
                "max_rate_per_endpoint": 0,
                "max_rate_per_instance": 0,
                "max_utilization": 1
              }
            ],
            "connection_draining_timeout_sec": 300,
            "creation_timestamp": "2023-12-26T02:11:09.480-08:00",
            "enable_cdn": false,
            "fingerprint": "XW-8mj6AsAU=",
            "generated_id": 1949319018358184018,
            "health_checks": [
              "https://www.googleapis.com/compute/v1/projects/potluck-ctf/global/healthChecks/challenge22-health-check"
            ],
            "id": "projects/potluck-ctf/global/backendServices/challenge22-backend-service",
            "load_balancing_scheme": "EXTERNAL",
            "name": "challenge22-backend-service",
            "port_name": "challenge",
            "project": "potluck-ctf",
            "protocol": "TCP",
            "self_link": "https://www.googleapis.com/compute/v1/projects/potluck-ctf/global/backendServices/challenge22-backend-service",
            "session_affinity": "CLIENT_IP",
            "timeout_sec": 120
          },
          "dependencies": [
            "google_compute_health_check.challenge_healthcheck",
            "google_compute_instance.challenge_server",
            "google_compute_instance_group.challenge_group",
            "google_compute_network.potluckctf_network",
            "google_compute_subnetwork.potluckctf_challenge_subnet",
            "google_service_account.challenge_service_account"
          ]
        },
        {
          "index_key": "challenge24",
          "schema_version": 1,
          "attributes": {
            "affinity_cookie_ttl_sec": 0,
            "backend": [
              {
                "balancing_mode": "UTILIZATION",
                "capacity_scaler": 1,
                "group": "https://www.googleapis.com/compute/v1/projects/potluck-ctf/zones/europe-west3-b/instanceGroups/challenge24-group",
                "max_connections": 0,
                "max_connections_per_endpoint": 0,
                "max_connections_per_instance": 0,
                "max_rate": 0,
                "max_rate_per_endpoint": 0,
                "max_rate_per_instance": 0,
                "max_utilization": 1
              }
            ],
            "connection_draining_timeout_sec": 300,
            "creation_timestamp": "2023-12-26T02:11:32.381-08:00",
            "enable_cdn": false,
            "fingerprint": "LisYbKcmXzY=",
            "generated_id": 2130748873711753275,
            "health_checks": [
              "https://www.googleapis.com/compute/v1/projects/potluck-ctf/global/healthChecks/challenge24-health-check"
            ],
            "id": "projects/potluck-ctf/global/backendServices/challenge24-backend-service",
            "load_balancing_scheme": "EXTERNAL",
            "name": "challenge24-backend-service",
            "port_name": "challenge",
            "project": "potluck-ctf",
            "protocol": "TCP",
            "self_link": "https://www.googleapis.com/compute/v1/projects/potluck-ctf/global/backendServices/challenge24-backend-service",
            "session_affinity": "CLIENT_IP",
            "timeout_sec": 120
          },
          "dependencies": [
            "google_compute_health_check.challenge_healthcheck",
            "google_compute_instance.challenge_server",
            "google_compute_instance_group.challenge_group",
            "google_compute_network.potluckctf_network",
            "google_compute_subnetwork.potluckctf_challenge_subnet",
            "google_service_account.challenge_service_account"
          ]
        },
        {
          "index_key": "challenge25",
          "schema_version": 1,
          "attributes": {
            "affinity_cookie_ttl_sec": 0,
            "backend": [
              {
                "balancing_mode": "UTILIZATION",
                "capacity_scaler": 1,
                "group": "https://www.googleapis.com/compute/v1/projects/potluck-ctf/zones/europe-west3-b/instanceGroups/challenge25-group",
                "max_connections": 0,
                "max_connections_per_endpoint": 0,
                "max_connections_per_instance": 0,
                "max_rate": 0,
                "max_rate_per_endpoint": 0,
                "max_rate_per_instance": 0,
                "max_utilization": 1
              }
            ],
            "connection_draining_timeout_sec": 300,
            "creation_timestamp": "2023-12-26T02:11:42.698-08:00",
            "enable_cdn": false,
            "fingerprint": "0GiRTqgK4Dk=",
            "generated_id": 6980393178602346545,
            "health_checks": [
              "https://www.googleapis.com/compute/v1/projects/potluck-ctf/global/healthChecks/challenge25-health-check"
            ],
            "id": "projects/potluck-ctf/global/backendServices/challenge25-backend-service",
            "load_balancing_scheme": "EXTERNAL",
            "name": "challenge25-backend-service",
            "port_name": "challenge",
            "project": "potluck-ctf",
            "protocol": "TCP",
            "self_link": "https://www.googleapis.com/compute/v1/projects/potluck-ctf/global/backendServices/challenge25-backend-service",
            "session_affinity": "CLIENT_IP",
            "timeout_sec": 120
          },
          "dependencies": [
            "google_compute_health_check.challenge_healthcheck",
            "google_compute_instance.challenge_server",
            "google_compute_instance_group.challenge_group",
            "google_compute_network.potluckctf_network",
            "google_compute_subnetwork.potluckctf_challenge_subnet",
            "google_service_account.challenge_service_account"
          ]
        },
        {
          "index_key": "challenge26",
          "schema_version": 1,
          "attributes": {
            "affinity_cookie_ttl_sec": 0,
            "backend": [
              {
                "balancing_mode": "UTILIZATION",
                "capacity_scaler": 1,
                "group": "https://www.googleapis.com/compute/v1/projects/potluck-ctf/zones/europe-west3-b/instanceGroups/challenge26-group",
                "max_connections": 0,
                "max_connections_per_endpoint": 0,
                "max_connections_per_instance": 0,
                "max_rate": 0,
                "max_rate_per_endpoint": 0,
                "max_rate_per_instance": 0,
                "max_utilization": 1
              }
            ],
            "connection_draining_timeout_sec": 300,
            "creation_timestamp": "2023-12-26T02:11:32.671-08:00",
            "enable_cdn": false,
            "fingerprint": "CG4fcA2YVx4=",
            "generated_id": 9047614913021155387,
            "health_checks": [
              "https://www.googleapis.com/compute/v1/projects/potluck-ctf/global/healthChecks/challenge26-health-check"
            ],
            "id": "projects/potluck-ctf/global/backendServices/challenge26-backend-service",
            "load_balancing_scheme": "EXTERNAL",
            "name": "challenge26-backend-service",
            "port_name": "challenge",
            "project": "potluck-ctf",
            "protocol": "TCP",
            "self_link": "https://www.googleapis.com/compute/v1/projects/potluck-ctf/global/backendServices/challenge26-backend-service",
            "session_affinity": "CLIENT_IP",
            "timeout_sec": 120
          },
          "dependencies": [
            "google_compute_health_check.challenge_healthcheck",
            "google_compute_instance.challenge_server",
            "google_compute_instance_group.challenge_group",
            "google_compute_network.potluckctf_network",
            "google_compute_subnetwork.potluckctf_challenge_subnet",
            "google_service_account.challenge_service_account"
          ]
        },
        {
          "index_key": "challenge27",
          "schema_version": 1,
          "attributes": {
            "affinity_cookie_ttl_sec": 0,
            "backend": [
              {
                "balancing_mode": "UTILIZATION",
                "capacity_scaler": 1,
                "group": "https://www.googleapis.com/compute/v1/projects/potluck-ctf/zones/europe-west3-b/instanceGroups/challenge27-group",
                "max_connections": 0,
                "max_connections_per_endpoint": 0,
                "max_connections_per_instance": 0,
                "max_rate": 0,
                "max_rate_per_endpoint": 0,
                "max_rate_per_instance": 0,
                "max_utilization": 1
              }
            ],
            "connection_draining_timeout_sec": 300,
            "creation_timestamp": "2023-12-26T02:11:10.181-08:00",
            "enable_cdn": false,
            "fingerprint": "ixFYpMxUnYQ=",
            "generated_id": 4264236305625847889,
            "health_checks": [
              "https://www.googleapis.com/compute/v1/projects/potluck-ctf/global/healthChecks/challenge27-health-check"
            ],
            "id": "projects/potluck-ctf/global/backendServices/challenge27-backend-service",
            "load_balancing_scheme": "EXTERNAL",
            "name": "challenge27-backend-service",
            "port_name": "challenge",
            "project": "potluck-ctf",
            "protocol": "TCP",
            "self_link": "https://www.googleapis.com/compute/v1/projects/potluck-ctf/global/backendServices/challenge27-backend-service",
            "session_affinity": "CLIENT_IP",
            "timeout_sec": 120
          },
          "dependencies": [
            "google_compute_health_check.challenge_healthcheck",
            "google_compute_instance.challenge_server",
            "google_compute_instance_group.challenge_group",
            "google_compute_network.potluckctf_network",
            "google_compute_subnetwork.potluckctf_challenge_subnet",
            "google_service_account.challenge_service_account"
          ]
        },
        {
          "index_key": "challenge28",
          "schema_version": 1,
          "attributes": {
            "affinity_cookie_ttl_sec": 0,
            "backend": [
              {
                "balancing_mode": "UTILIZATION",
                "capacity_scaler": 1,
                "group": "https://www.googleapis.com/compute/v1/projects/potluck-ctf/zones/europe-west3-b/instanceGroups/challenge28-group",
                "max_connections": 0,
                "max_connections_per_endpoint": 0,
                "max_connections_per_instance": 0,
                "max_rate": 0,
                "max_rate_per_endpoint": 0,
                "max_rate_per_instance": 0,
                "max_utilization": 1
              }
            ],
            "connection_draining_timeout_sec": 300,
            "creation_timestamp": "2023-12-26T02:11:09.422-08:00",
            "enable_cdn": false,
            "fingerprint": "topJzYsm-xI=",
            "generated_id": 3314529039735527506,
            "health_checks": [
              "https://www.googleapis.com/compute/v1/projects/potluck-ctf/global/healthChecks/challenge28-health-check"
            ],
            "id": "projects/potluck-ctf/global/backendServices/challenge28-backend-service",
            "load_balancing_scheme": "EXTERNAL",
            "name": "challenge28-backend-service",
            "port_name": "challenge",
            "project": "potluck-ctf",
            "protocol": "TCP",
            "self_link": "https://www.googleapis.com/compute/v1/projects/potluck-ctf/global/backendServices/challenge28-backend-service",
            "session_affinity": "CLIENT_IP",
            "timeout_sec": 120
          },
          "dependencies": [
            "google_compute_health_check.challenge_healthcheck",
            "google_compute_instance.challenge_server",
            "google_compute_instance_group.challenge_group",
            "google_compute_network.potluckctf_network",
            "google_compute_subnetwork.potluckctf_challenge_subnet",
            "google_service_account.challenge_service_account"
          ]
        },
        {
          "index_key": "challenge29",
          "schema_version": 1,
          "attributes": {
            "affinity_cookie_ttl_sec": 0,
            "backend": [
              {
                "balancing_mode": "UTILIZATION",
                "capacity_scaler": 1,
                "group": "https://www.googleapis.com/compute/v1/projects/potluck-ctf/zones/europe-west3-b/instanceGroups/challenge29-group",
                "max_connections": 0,
                "max_connections_per_endpoint": 0,
                "max_connections_per_instance": 0,
                "max_rate": 0,
                "max_rate_per_endpoint": 0,
                "max_rate_per_instance": 0,
                "max_utilization": 1
              }
            ],
            "connection_draining_timeout_sec": 300,
            "creation_timestamp": "2023-12-26T02:11:09.730-08:00",
            "enable_cdn": false,
            "fingerprint": "QS9Qh5MuimQ=",
            "generated_id": 2999273574011181138,
            "health_checks": [
              "https://www.googleapis.com/compute/v1/projects/potluck-ctf/global/healthChecks/challenge29-health-check"
            ],
            "id": "projects/potluck-ctf/global/backendServices/challenge29-backend-service",
            "load_balancing_scheme": "EXTERNAL",
            "name": "challenge29-backend-service",
            "port_name": "challenge",
            "project": "potluck-ctf",
            "protocol": "TCP",
            "self_link": "https://www.googleapis.com/compute/v1/projects/potluck-ctf/global/backendServices/challenge29-backend-service",
            "session_affinity": "CLIENT_IP",
            "timeout_sec": 120
          },
          "dependencies": [
            "google_compute_health_check.challenge_healthcheck",
            "google_compute_instance.challenge_server",
            "google_compute_instance_group.challenge_group",
            "google_compute_network.potluckctf_network",
            "google_compute_subnetwork.potluckctf_challenge_subnet",
            "google_service_account.challenge_service_account"
          ]
        },
        {
          "index_key": "challenge30",
          "schema_version": 1,
          "attributes": {
            "affinity_cookie_ttl_sec": 0,
            "backend": [
              {
                "balancing_mode": "UTILIZATION",
                "capacity_scaler": 1,
                "group": "https://www.googleapis.com/compute/v1/projects/potluck-ctf/zones/europe-west3-b/instanceGroups/challenge30-group",
                "max_connections": 0,
                "max_connections_per_endpoint": 0,
                "max_connections_per_instance": 0,
                "max_rate": 0,
                "max_rate_per_endpoint": 0,
                "max_rate_per_instance": 0,
                "max_utilization": 1
              }
            ],
            "connection_draining_timeout_sec": 300,
            "creation_timestamp": "2023-12-28T16:59:35.223-08:00",
            "enable_cdn": false,
            "fingerprint": "IcymJxyzPZo=",
            "generated_id": 3392062536687003416,
            "health_checks": [
              "https://www.googleapis.com/compute/v1/projects/potluck-ctf/global/healthChecks/challenge30-health-check"
            ],
            "id": "projects/potluck-ctf/global/backendServices/challenge30-backend-service",
            "load_balancing_scheme": "EXTERNAL",
            "name": "challenge30-backend-service",
            "port_name": "challenge",
            "project": "potluck-ctf",
            "protocol": "TCP",
            "self_link": "https://www.googleapis.com/compute/v1/projects/potluck-ctf/global/backendServices/challenge30-backend-service",
            "session_affinity": "CLIENT_IP",
            "timeout_sec": 120
          },
          "dependencies": [
            "google_compute_health_check.challenge_healthcheck",
            "google_compute_instance.challenge_server",
            "google_compute_instance_group.challenge_group",
            "google_compute_network.potluckctf_network",
            "google_compute_subnetwork.potluckctf_challenge_subnet",
            "google_service_account.challenge_service_account"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "potlucktf_firewall_challenge",
      "provider": "provider[\"registry.terraform.io/hashicorp/google-beta\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "31337"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2023-12-28T09:52:49.326-08:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/potluck-ctf/global/firewalls/potluckctf-fw-challenge",
            "log_config": [],
            "name": "potluckctf-fw-challenge",
            "network": "https://www.googleapis.com/compute/v1/projects/potluck-ctf/global/networks/potluckctf-network",
            "priority": 1000,
            "project": "potluck-ctf",
            "self_link": "https://www.googleapis.com/compute/v1/projects/potluck-ctf/global/firewalls/potluckctf-fw-challenge",
            "source_ranges": [
              "130.211.0.0/22",
              "35.191.0.0/16"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [
              "challenge"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.potluckctf_network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "potlucktf_firewall_challenge_iap",
      "provider": "provider[\"registry.terraform.io/hashicorp/google-beta\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "31337",
                  "80"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2023-12-26T02:08:12.768-08:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/potluck-ctf/global/firewalls/potluckctf-fw-challenge-iap",
            "log_config": [],
            "name": "potluckctf-fw-challenge-iap",
            "network": "https://www.googleapis.com/compute/v1/projects/potluck-ctf/global/networks/potluckctf-network",
            "priority": 1000,
            "project": "potluck-ctf",
            "self_link": "https://www.googleapis.com/compute/v1/projects/potluck-ctf/global/firewalls/potluckctf-fw-challenge-iap",
            "source_ranges": [
              "35.235.240.0/20"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.potluckctf_network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "potlucktf_firewall_healthcheck",
      "provider": "provider[\"registry.terraform.io/hashicorp/google-beta\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "80"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2023-12-26T02:08:12.984-08:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/potluck-ctf/global/firewalls/potluckctf-fw-healthcheck",
            "log_config": [],
            "name": "potluckctf-fw-healthcheck",
            "network": "https://www.googleapis.com/compute/v1/projects/potluck-ctf/global/networks/potluckctf-network",
            "priority": 1000,
            "project": "potluck-ctf",
            "self_link": "https://www.googleapis.com/compute/v1/projects/potluck-ctf/global/firewalls/potluckctf-fw-healthcheck",
            "source_ranges": [
              "130.211.0.0/22",
              "35.191.0.0/16"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [
              "challenge"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.potluckctf_network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "potlucktf_firewall_monitor_http",
      "provider": "provider[\"registry.terraform.io/hashicorp/google-beta\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "80",
                  "443"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2023-12-20T13:38:42.296-08:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/potluck-ctf/global/firewalls/potluckctf-fw-monitor-http",
            "log_config": [],
            "name": "potluckctf-fw-monitor-http",
            "network": "https://www.googleapis.com/compute/v1/projects/potluck-ctf/global/networks/potluckctf-network",
            "priority": 1000,
            "project": "potluck-ctf",
            "self_link": "https://www.googleapis.com/compute/v1/projects/potluck-ctf/global/firewalls/potluckctf-fw-monitor-http",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [
              "monitor"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.potluckctf_network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "potlucktf_firewall_node_exporter",
      "provider": "provider[\"registry.terraform.io/hashicorp/google-beta\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "9100"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2023-12-20T13:38:42.237-08:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/potluck-ctf/global/firewalls/potluckctf-fw-node-exporter",
            "log_config": [],
            "name": "potluckctf-fw-node-exporter",
            "network": "https://www.googleapis.com/compute/v1/projects/potluck-ctf/global/networks/potluckctf-network",
            "priority": 1000,
            "project": "potluck-ctf",
            "self_link": "https://www.googleapis.com/compute/v1/projects/potluck-ctf/global/firewalls/potluckctf-fw-node-exporter",
            "source_ranges": [
              "10.0.0.0/8"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.potluckctf_network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "potlucktf_firewall_scoreboard_http",
      "provider": "provider[\"registry.terraform.io/hashicorp/google-beta\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "80",
                  "443"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2023-12-20T15:03:35.043-08:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/potluck-ctf/global/firewalls/potluckctf-fw-scoreboard-http",
            "log_config": [],
            "name": "potluckctf-fw-scoreboard-http",
            "network": "https://www.googleapis.com/compute/v1/projects/potluck-ctf/global/networks/potluckctf-network",
            "priority": 1000,
            "project": "potluck-ctf",
            "self_link": "https://www.googleapis.com/compute/v1/projects/potluck-ctf/global/firewalls/potluckctf-fw-scoreboard-http",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [
              "scoreboard"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.potluckctf_network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "potlucktf_firewall_ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/google-beta\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "22"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2023-12-20T13:38:42.282-08:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/potluck-ctf/global/firewalls/potluckctf-fw-ssh",
            "log_config": [],
            "name": "potluckctf-fw-ssh",
            "network": "https://www.googleapis.com/compute/v1/projects/potluck-ctf/global/networks/potluckctf-network",
            "priority": 1000,
            "project": "potluck-ctf",
            "self_link": "https://www.googleapis.com/compute/v1/projects/potluck-ctf/global/firewalls/potluckctf-fw-ssh",
            "source_ranges": [
              "35.235.240.0/20"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.potluckctf_network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "potlucktf_firewall_syslog",
      "provider": "provider[\"registry.terraform.io/hashicorp/google-beta\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "514"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2023-12-20T13:38:41.883-08:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/potluck-ctf/global/firewalls/potluckctf-fw-syslog",
            "log_config": [],
            "name": "potluckctf-fw-syslog",
            "network": "https://www.googleapis.com/compute/v1/projects/potluck-ctf/global/networks/potluckctf-network",
            "priority": 1000,
            "project": "potluck-ctf",
            "self_link": "https://www.googleapis.com/compute/v1/projects/potluck-ctf/global/firewalls/potluckctf-fw-syslog",
            "source_ranges": [
              "10.0.0.0/8"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [
              "monitor"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.potluckctf_network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_global_address",
      "name": "challenge_ip",
      "provider": "provider[\"registry.terraform.io/hashicorp/google-beta\"]",
      "instances": [
        {
          "index_key": "challenge00",
          "schema_version": 0,
          "attributes": {
            "address": "34.117.182.222",
            "address_type": "EXTERNAL",
            "creation_timestamp": "2023-12-26T02:09:20.087-08:00",
            "id": "projects/potluck-ctf/global/addresses/challenge00-ip",
            "label_fingerprint": "42WmSpB8rSM=",
            "name": "challenge00-ip",
            "prefix_length": 0,
            "project": "potluck-ctf",
            "self_link": "https://www.googleapis.com/compute/v1/projects/potluck-ctf/global/addresses/challenge00-ip"
          }
        },
        {
          "index_key": "challenge01",
          "schema_version": 0,
          "attributes": {
            "address": "34.107.204.216",
            "address_type": "EXTERNAL",
            "creation_timestamp": "2023-12-26T02:09:21.196-08:00",
            "id": "projects/potluck-ctf/global/addresses/challenge01-ip",
            "label_fingerprint": "42WmSpB8rSM=",
            "name": "challenge01-ip",
            "prefix_length": 0,
            "project": "potluck-ctf",
            "self_link": "https://www.googleapis.com/compute/v1/projects/potluck-ctf/global/addresses/challenge01-ip"
          }
        },
        {
          "index_key": "challenge03",
          "schema_version": 0,
          "attributes": {
            "address": "107.178.254.251",
            "address_type": "EXTERNAL",
            "creation_timestamp": "2023-12-26T02:09:10.668-08:00",
            "id": "projects/potluck-ctf/global/addresses/challenge03-ip",
            "label_fingerprint": "42WmSpB8rSM=",
            "name": "challenge03-ip",
            "prefix_length": 0,
            "project": "potluck-ctf",
            "self_link": "https://www.googleapis.com/compute/v1/projects/potluck-ctf/global/addresses/challenge03-ip"
          }
        },
        {
          "index_key": "challenge05",
          "schema_version": 0,
          "attributes": {
            "address": "35.244.253.69",
            "address_type": "EXTERNAL",
            "creation_timestamp": "2023-12-26T02:08:59.248-08:00",
            "id": "projects/potluck-ctf/global/addresses/challenge05-ip",
            "label_fingerprint": "42WmSpB8rSM=",
            "name": "challenge05-ip",
            "prefix_length": 0,
            "project": "potluck-ctf",
            "self_link": "https://www.googleapis.com/compute/v1/projects/potluck-ctf/global/addresses/challenge05-ip"
          }
        },
        {
          "index_key": "challenge06",
          "schema_version": 0,
          "attributes": {
            "address": "34.111.95.66",
            "address_type": "EXTERNAL",
            "creation_timestamp": "2023-12-26T02:08:12.828-08:00",
            "id": "projects/potluck-ctf/global/addresses/challenge06-ip",
            "label_fingerprint": "42WmSpB8rSM=",
            "name": "challenge06-ip",
            "prefix_length": 0,
            "project": "potluck-ctf",
            "self_link": "https://www.googleapis.com/compute/v1/projects/potluck-ctf/global/addresses/challenge06-ip"
          }
        },
        {
          "index_key": "challenge07",
          "schema_version": 0,
          "attributes": {
            "address": "34.144.192.21",
            "address_type": "EXTERNAL",
            "creation_timestamp": "2023-12-26T02:08:58.357-08:00",
            "id": "projects/potluck-ctf/global/addresses/challenge07-ip",
            "label_fingerprint": "42WmSpB8rSM=",
            "name": "challenge07-ip",
            "prefix_length": 0,
            "project": "potluck-ctf",
            "self_link": "https://www.googleapis.com/compute/v1/projects/potluck-ctf/global/addresses/challenge07-ip"
          }
        },
        {
          "index_key": "challenge09",
          "schema_version": 0,
          "attributes": {
            "address": "34.120.122.99",
            "address_type": "EXTERNAL",
            "creation_timestamp": "2023-12-26T02:08:59.457-08:00",
            "id": "projects/potluck-ctf/global/addresses/challenge09-ip",
            "label_fingerprint": "42WmSpB8rSM=",
            "name": "challenge09-ip",
            "prefix_length": 0,
            "project": "potluck-ctf",
            "self_link": "https://www.googleapis.com/compute/v1/projects/potluck-ctf/global/addresses/challenge09-ip"
          }
        },
        {
          "index_key": "challenge11",
          "schema_version": 0,
          "attributes": {
            "address": "34.36.128.223",
            "address_type": "EXTERNAL",
            "creation_timestamp": "2023-12-26T02:09:08.467-08:00",
            "id": "projects/potluck-ctf/global/addresses/challenge11-ip",
            "label_fingerprint": "42WmSpB8rSM=",
            "name": "challenge11-ip",
            "prefix_length": 0,
            "project": "potluck-ctf",
            "self_link": "https://www.googleapis.com/compute/v1/projects/potluck-ctf/global/addresses/challenge11-ip"
          }
        },
        {
          "index_key": "challenge12",
          "schema_version": 0,
          "attributes": {
            "address": "34.128.167.54",
            "address_type": "EXTERNAL",
            "creation_timestamp": "2023-12-26T02:09:10.779-08:00",
            "id": "projects/potluck-ctf/global/addresses/challenge12-ip",
            "label_fingerprint": "42WmSpB8rSM=",
            "name": "challenge12-ip",
            "prefix_length": 0,
            "project": "potluck-ctf",
            "self_link": "https://www.googleapis.com/compute/v1/projects/potluck-ctf/global/addresses/challenge12-ip"
          }
        },
        {
          "index_key": "challenge13",
          "schema_version": 0,
          "attributes": {
            "address": "34.107.252.3",
            "address_type": "EXTERNAL",
            "creation_timestamp": "2023-12-26T02:09:09.368-08:00",
            "id": "projects/potluck-ctf/global/addresses/challenge13-ip",
            "label_fingerprint": "42WmSpB8rSM=",
            "name": "challenge13-ip",
            "prefix_length": 0,
            "project": "potluck-ctf",
            "self_link": "https://www.googleapis.com/compute/v1/projects/potluck-ctf/global/addresses/challenge13-ip"
          }
        },
        {
          "index_key": "challenge15",
          "schema_version": 0,
          "attributes": {
            "address": "34.160.151.106",
            "address_type": "EXTERNAL",
            "creation_timestamp": "2023-12-26T02:09:20.467-08:00",
            "id": "projects/potluck-ctf/global/addresses/challenge15-ip",
            "label_fingerprint": "42WmSpB8rSM=",
            "name": "challenge15-ip",
            "prefix_length": 0,
            "project": "potluck-ctf",
            "self_link": "https://www.googleapis.com/compute/v1/projects/potluck-ctf/global/addresses/challenge15-ip"
          }
        },
        {
          "index_key": "challenge17",
          "schema_version": 0,
          "attributes": {
            "address": "34.120.42.105",
            "address_type": "EXTERNAL",
            "creation_timestamp": "2023-12-27T06:59:24.122-08:00",
            "id": "projects/potluck-ctf/global/addresses/challenge17-ip",
            "label_fingerprint": "42WmSpB8rSM=",
            "name": "challenge17-ip",
            "prefix_length": 0,
            "project": "potluck-ctf",
            "self_link": "https://www.googleapis.com/compute/v1/projects/potluck-ctf/global/addresses/challenge17-ip"
          }
        },
        {
          "index_key": "challenge18",
          "schema_version": 0,
          "attributes": {
            "address": "34.144.255.97",
            "address_type": "EXTERNAL",
            "creation_timestamp": "2023-12-26T02:09:18.885-08:00",
            "id": "projects/potluck-ctf/global/addresses/challenge18-ip",
            "label_fingerprint": "42WmSpB8rSM=",
            "name": "challenge18-ip",
            "prefix_length": 0,
            "project": "potluck-ctf",
            "self_link": "https://www.googleapis.com/compute/v1/projects/potluck-ctf/global/addresses/challenge18-ip"
          }
        },
        {
          "index_key": "challenge19",
          "schema_version": 0,
          "attributes": {
            "address": "34.128.154.35",
            "address_type": "EXTERNAL",
            "creation_timestamp": "2023-12-26T02:09:20.971-08:00",
            "id": "projects/potluck-ctf/global/addresses/challenge19-ip",
            "label_fingerprint": "42WmSpB8rSM=",
            "name": "challenge19-ip",
            "prefix_length": 0,
            "project": "potluck-ctf",
            "self_link": "https://www.googleapis.com/compute/v1/projects/potluck-ctf/global/addresses/challenge19-ip"
          }
        },
        {
          "index_key": "challenge21",
          "schema_version": 0,
          "attributes": {
            "address": "34.36.29.126",
            "address_type": "EXTERNAL",
            "creation_timestamp": "2023-12-26T02:08:59.238-08:00",
            "id": "projects/potluck-ctf/global/addresses/challenge21-ip",
            "label_fingerprint": "42WmSpB8rSM=",
            "name": "challenge21-ip",
            "prefix_length": 0,
            "project": "potluck-ctf",
            "self_link": "https://www.googleapis.com/compute/v1/projects/potluck-ctf/global/addresses/challenge21-ip"
          }
        },
        {
          "index_key": "challenge22",
          "schema_version": 0,
          "attributes": {
            "address": "34.117.148.182",
            "address_type": "EXTERNAL",
            "creation_timestamp": "2023-12-26T02:08:13.397-08:00",
            "id": "projects/potluck-ctf/global/addresses/challenge22-ip",
            "label_fingerprint": "42WmSpB8rSM=",
            "name": "challenge22-ip",
            "prefix_length": 0,
            "project": "potluck-ctf",
            "self_link": "https://www.googleapis.com/compute/v1/projects/potluck-ctf/global/addresses/challenge22-ip"
          }
        },
        {
          "index_key": "challenge24",
          "schema_version": 0,
          "attributes": {
            "address": "34.120.15.221",
            "address_type": "EXTERNAL",
            "creation_timestamp": "2023-12-26T02:09:18.558-08:00",
            "id": "projects/potluck-ctf/global/addresses/challenge24-ip",
            "label_fingerprint": "42WmSpB8rSM=",
            "name": "challenge24-ip",
            "prefix_length": 0,
            "project": "potluck-ctf",
            "self_link": "https://www.googleapis.com/compute/v1/projects/potluck-ctf/global/addresses/challenge24-ip"
          }
        },
        {
          "index_key": "challenge25",
          "schema_version": 0,
          "attributes": {
            "address": "34.102.231.130",
            "address_type": "EXTERNAL",
            "creation_timestamp": "2023-12-26T02:09:22.498-08:00",
            "id": "projects/potluck-ctf/global/addresses/challenge25-ip",
            "label_fingerprint": "42WmSpB8rSM=",
            "name": "challenge25-ip",
            "prefix_length": 0,
            "project": "potluck-ctf",
            "self_link": "https://www.googleapis.com/compute/v1/projects/potluck-ctf/global/addresses/challenge25-ip"
          }
        },
        {
          "index_key": "challenge26",
          "schema_version": 0,
          "attributes": {
            "address": "35.227.211.43",
            "address_type": "EXTERNAL",
            "creation_timestamp": "2023-12-26T02:08:13.265-08:00",
            "id": "projects/potluck-ctf/global/addresses/challenge26-ip",
            "label_fingerprint": "42WmSpB8rSM=",
            "name": "challenge26-ip",
            "prefix_length": 0,
            "project": "potluck-ctf",
            "self_link": "https://www.googleapis.com/compute/v1/projects/potluck-ctf/global/addresses/challenge26-ip"
          }
        },
        {
          "index_key": "challenge27",
          "schema_version": 0,
          "attributes": {
            "address": "34.110.200.53",
            "address_type": "EXTERNAL",
            "creation_timestamp": "2023-12-26T02:09:11.615-08:00",
            "id": "projects/potluck-ctf/global/addresses/challenge27-ip",
            "label_fingerprint": "42WmSpB8rSM=",
            "name": "challenge27-ip",
            "prefix_length": 0,
            "project": "potluck-ctf",
            "self_link": "https://www.googleapis.com/compute/v1/projects/potluck-ctf/global/addresses/challenge27-ip"
          }
        },
        {
          "index_key": "challenge28",
          "schema_version": 0,
          "attributes": {
            "address": "34.144.203.150",
            "address_type": "EXTERNAL",
            "creation_timestamp": "2023-12-26T02:09:08.375-08:00",
            "id": "projects/potluck-ctf/global/addresses/challenge28-ip",
            "label_fingerprint": "42WmSpB8rSM=",
            "name": "challenge28-ip",
            "prefix_length": 0,
            "project": "potluck-ctf",
            "self_link": "https://www.googleapis.com/compute/v1/projects/potluck-ctf/global/addresses/challenge28-ip"
          }
        },
        {
          "index_key": "challenge29",
          "schema_version": 0,
          "attributes": {
            "address": "34.36.167.111",
            "address_type": "EXTERNAL",
            "creation_timestamp": "2023-12-26T02:09:09.410-08:00",
            "id": "projects/potluck-ctf/global/addresses/challenge29-ip",
            "label_fingerprint": "42WmSpB8rSM=",
            "name": "challenge29-ip",
            "prefix_length": 0,
            "project": "potluck-ctf",
            "self_link": "https://www.googleapis.com/compute/v1/projects/potluck-ctf/global/addresses/challenge29-ip"
          }
        },
        {
          "index_key": "challenge30",
          "schema_version": 0,
          "attributes": {
            "address": "34.120.220.250",
            "address_type": "EXTERNAL",
            "creation_timestamp": "2023-12-28T16:58:35.430-08:00",
            "id": "projects/potluck-ctf/global/addresses/challenge30-ip",
            "label_fingerprint": "42WmSpB8rSM=",
            "name": "challenge30-ip",
            "prefix_length": 0,
            "project": "potluck-ctf",
            "self_link": "https://www.googleapis.com/compute/v1/projects/potluck-ctf/global/addresses/challenge30-ip"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_global_forwarding_rule",
      "name": "challenge_forwarding",
      "provider": "provider[\"registry.terraform.io/hashicorp/google-beta\"]",
      "instances": [
        {
          "index_key": "challenge00",
          "schema_version": 0,
          "attributes": {
            "allow_psc_global_access": false,
            "id": "projects/potluck-ctf/global/forwardingRules/challenge00-forwarding-rule",
            "ip_address": "34.117.182.222",
            "ip_protocol": "TCP",
            "label_fingerprint": "42WmSpB8rSM=",
            "load_balancing_scheme": "EXTERNAL",
            "name": "challenge00-forwarding-rule",
            "port_range": "31337-31337",
            "project": "potluck-ctf",
            "self_link": "https://www.googleapis.com/compute/v1/projects/potluck-ctf/global/forwardingRules/challenge00-forwarding-rule",
            "target": "https://www.googleapis.com/compute/beta/projects/potluck-ctf/global/targetTcpProxies/challenge00-health-check"
          },
          "dependencies": [
            "google_compute_backend_service.challenge_service",
            "google_compute_global_address.challenge_ip",
            "google_compute_health_check.challenge_healthcheck",
            "google_compute_instance.challenge_server",
            "google_compute_instance_group.challenge_group",
            "google_compute_network.potluckctf_network",
            "google_compute_subnetwork.potluckctf_challenge_subnet",
            "google_compute_target_tcp_proxy.challenge_proxy",
            "google_service_account.challenge_service_account"
          ]
        },
        {
          "index_key": "challenge01",
          "schema_version": 0,
          "attributes": {
            "allow_psc_global_access": false,
            "id": "projects/potluck-ctf/global/forwardingRules/challenge01-forwarding-rule",
            "ip_address": "34.107.204.216",
            "ip_protocol": "TCP",
            "label_fingerprint": "42WmSpB8rSM=",
            "load_balancing_scheme": "EXTERNAL",
            "name": "challenge01-forwarding-rule",
            "port_range": "31337-31337",
            "project": "potluck-ctf",
            "self_link": "https://www.googleapis.com/compute/v1/projects/potluck-ctf/global/forwardingRules/challenge01-forwarding-rule",
            "target": "https://www.googleapis.com/compute/beta/projects/potluck-ctf/global/targetTcpProxies/challenge01-health-check"
          },
          "dependencies": [
            "google_compute_backend_service.challenge_service",
            "google_compute_global_address.challenge_ip",
            "google_compute_health_check.challenge_healthcheck",
            "google_compute_instance.challenge_server",
            "google_compute_instance_group.challenge_group",
            "google_compute_network.potluckctf_network",
            "google_compute_subnetwork.potluckctf_challenge_subnet",
            "google_compute_target_tcp_proxy.challenge_proxy",
            "google_service_account.challenge_service_account"
          ]
        },
        {
          "index_key": "challenge03",
          "schema_version": 0,
          "attributes": {
            "allow_psc_global_access": false,
            "id": "projects/potluck-ctf/global/forwardingRules/challenge03-forwarding-rule",
            "ip_address": "107.178.254.251",
            "ip_protocol": "TCP",
            "label_fingerprint": "42WmSpB8rSM=",
            "load_balancing_scheme": "EXTERNAL",
            "name": "challenge03-forwarding-rule",
            "port_range": "31337-31337",
            "project": "potluck-ctf",
            "self_link": "https://www.googleapis.com/compute/v1/projects/potluck-ctf/global/forwardingRules/challenge03-forwarding-rule",
            "target": "https://www.googleapis.com/compute/beta/projects/potluck-ctf/global/targetTcpProxies/challenge03-health-check"
          },
          "dependencies": [
            "google_compute_backend_service.challenge_service",
            "google_compute_global_address.challenge_ip",
            "google_compute_health_check.challenge_healthcheck",
            "google_compute_instance.challenge_server",
            "google_compute_instance_group.challenge_group",
            "google_compute_network.potluckctf_network",
            "google_compute_subnetwork.potluckctf_challenge_subnet",
            "google_compute_target_tcp_proxy.challenge_proxy",
            "google_service_account.challenge_service_account"
          ]
        },
        {
          "index_key": "challenge05",
          "schema_version": 0,
          "attributes": {
            "allow_psc_global_access": false,
            "id": "projects/potluck-ctf/global/forwardingRules/challenge05-forwarding-rule",
            "ip_address": "35.244.253.69",
            "ip_protocol": "TCP",
            "label_fingerprint": "42WmSpB8rSM=",
            "load_balancing_scheme": "EXTERNAL",
            "name": "challenge05-forwarding-rule",
            "port_range": "31337-31337",
            "project": "potluck-ctf",
            "self_link": "https://www.googleapis.com/compute/v1/projects/potluck-ctf/global/forwardingRules/challenge05-forwarding-rule",
            "target": "https://www.googleapis.com/compute/beta/projects/potluck-ctf/global/targetTcpProxies/challenge05-health-check"
          },
          "dependencies": [
            "google_compute_backend_service.challenge_service",
            "google_compute_global_address.challenge_ip",
            "google_compute_health_check.challenge_healthcheck",
            "google_compute_instance.challenge_server",
            "google_compute_instance_group.challenge_group",
            "google_compute_network.potluckctf_network",
            "google_compute_subnetwork.potluckctf_challenge_subnet",
            "google_compute_target_tcp_proxy.challenge_proxy",
            "google_service_account.challenge_service_account"
          ]
        },
        {
          "index_key": "challenge06",
          "schema_version": 0,
          "attributes": {
            "allow_psc_global_access": false,
            "id": "projects/potluck-ctf/global/forwardingRules/challenge06-forwarding-rule",
            "ip_address": "34.111.95.66",
            "ip_protocol": "TCP",
            "label_fingerprint": "42WmSpB8rSM=",
            "load_balancing_scheme": "EXTERNAL",
            "name": "challenge06-forwarding-rule",
            "port_range": "31337-31337",
            "project": "potluck-ctf",
            "self_link": "https://www.googleapis.com/compute/v1/projects/potluck-ctf/global/forwardingRules/challenge06-forwarding-rule",
            "target": "https://www.googleapis.com/compute/beta/projects/potluck-ctf/global/targetTcpProxies/challenge06-health-check"
          },
          "dependencies": [
            "google_compute_backend_service.challenge_service",
            "google_compute_global_address.challenge_ip",
            "google_compute_health_check.challenge_healthcheck",
            "google_compute_instance.challenge_server",
            "google_compute_instance_group.challenge_group",
            "google_compute_network.potluckctf_network",
            "google_compute_subnetwork.potluckctf_challenge_subnet",
            "google_compute_target_tcp_proxy.challenge_proxy",
            "google_service_account.challenge_service_account"
          ]
        },
        {
          "index_key": "challenge07",
          "schema_version": 0,
          "attributes": {
            "allow_psc_global_access": false,
            "id": "projects/potluck-ctf/global/forwardingRules/challenge07-forwarding-rule",
            "ip_address": "34.144.192.21",
            "ip_protocol": "TCP",
            "label_fingerprint": "42WmSpB8rSM=",
            "load_balancing_scheme": "EXTERNAL",
            "name": "challenge07-forwarding-rule",
            "port_range": "31337-31337",
            "project": "potluck-ctf",
            "self_link": "https://www.googleapis.com/compute/v1/projects/potluck-ctf/global/forwardingRules/challenge07-forwarding-rule",
            "target": "https://www.googleapis.com/compute/beta/projects/potluck-ctf/global/targetTcpProxies/challenge07-health-check"
          },
          "dependencies": [
            "google_compute_backend_service.challenge_service",
            "google_compute_global_address.challenge_ip",
            "google_compute_health_check.challenge_healthcheck",
            "google_compute_instance.challenge_server",
            "google_compute_instance_group.challenge_group",
            "google_compute_network.potluckctf_network",
            "google_compute_subnetwork.potluckctf_challenge_subnet",
            "google_compute_target_tcp_proxy.challenge_proxy",
            "google_service_account.challenge_service_account"
          ]
        },
        {
          "index_key": "challenge09",
          "schema_version": 0,
          "attributes": {
            "allow_psc_global_access": false,
            "id": "projects/potluck-ctf/global/forwardingRules/challenge09-forwarding-rule",
            "ip_address": "34.120.122.99",
            "ip_protocol": "TCP",
            "label_fingerprint": "42WmSpB8rSM=",
            "load_balancing_scheme": "EXTERNAL",
            "name": "challenge09-forwarding-rule",
            "port_range": "31337-31337",
            "project": "potluck-ctf",
            "self_link": "https://www.googleapis.com/compute/v1/projects/potluck-ctf/global/forwardingRules/challenge09-forwarding-rule",
            "target": "https://www.googleapis.com/compute/beta/projects/potluck-ctf/global/targetTcpProxies/challenge09-health-check"
          },
          "dependencies": [
            "google_compute_backend_service.challenge_service",
            "google_compute_global_address.challenge_ip",
            "google_compute_health_check.challenge_healthcheck",
            "google_compute_instance.challenge_server",
            "google_compute_instance_group.challenge_group",
            "google_compute_network.potluckctf_network",
            "google_compute_subnetwork.potluckctf_challenge_subnet",
            "google_compute_target_tcp_proxy.challenge_proxy",
            "google_service_account.challenge_service_account"
          ]
        },
        {
          "index_key": "challenge11",
          "schema_version": 0,
          "attributes": {
            "allow_psc_global_access": false,
            "id": "projects/potluck-ctf/global/forwardingRules/challenge11-forwarding-rule",
            "ip_address": "34.36.128.223",
            "ip_protocol": "TCP",
            "label_fingerprint": "42WmSpB8rSM=",
            "load_balancing_scheme": "EXTERNAL",
            "name": "challenge11-forwarding-rule",
            "port_range": "31337-31337",
            "project": "potluck-ctf",
            "self_link": "https://www.googleapis.com/compute/v1/projects/potluck-ctf/global/forwardingRules/challenge11-forwarding-rule",
            "target": "https://www.googleapis.com/compute/beta/projects/potluck-ctf/global/targetTcpProxies/challenge11-health-check"
          },
          "dependencies": [
            "google_compute_backend_service.challenge_service",
            "google_compute_global_address.challenge_ip",
            "google_compute_health_check.challenge_healthcheck",
            "google_compute_instance.challenge_server",
            "google_compute_instance_group.challenge_group",
            "google_compute_network.potluckctf_network",
            "google_compute_subnetwork.potluckctf_challenge_subnet",
            "google_compute_target_tcp_proxy.challenge_proxy",
            "google_service_account.challenge_service_account"
          ]
        },
        {
          "index_key": "challenge12",
          "schema_version": 0,
          "attributes": {
            "allow_psc_global_access": false,
            "id": "projects/potluck-ctf/global/forwardingRules/challenge12-forwarding-rule",
            "ip_address": "34.128.167.54",
            "ip_protocol": "TCP",
            "label_fingerprint": "42WmSpB8rSM=",
            "load_balancing_scheme": "EXTERNAL",
            "name": "challenge12-forwarding-rule",
            "port_range": "31337-31337",
            "project": "potluck-ctf",
            "self_link": "https://www.googleapis.com/compute/v1/projects/potluck-ctf/global/forwardingRules/challenge12-forwarding-rule",
            "target": "https://www.googleapis.com/compute/beta/projects/potluck-ctf/global/targetTcpProxies/challenge12-health-check"
          },
          "dependencies": [
            "google_compute_backend_service.challenge_service",
            "google_compute_global_address.challenge_ip",
            "google_compute_health_check.challenge_healthcheck",
            "google_compute_instance.challenge_server",
            "google_compute_instance_group.challenge_group",
            "google_compute_network.potluckctf_network",
            "google_compute_subnetwork.potluckctf_challenge_subnet",
            "google_compute_target_tcp_proxy.challenge_proxy",
            "google_service_account.challenge_service_account"
          ]
        },
        {
          "index_key": "challenge13",
          "schema_version": 0,
          "attributes": {
            "allow_psc_global_access": false,
            "id": "projects/potluck-ctf/global/forwardingRules/challenge13-forwarding-rule",
            "ip_address": "34.107.252.3",
            "ip_protocol": "TCP",
            "label_fingerprint": "42WmSpB8rSM=",
            "load_balancing_scheme": "EXTERNAL",
            "name": "challenge13-forwarding-rule",
            "port_range": "31337-31337",
            "project": "potluck-ctf",
            "self_link": "https://www.googleapis.com/compute/v1/projects/potluck-ctf/global/forwardingRules/challenge13-forwarding-rule",
            "target": "https://www.googleapis.com/compute/beta/projects/potluck-ctf/global/targetTcpProxies/challenge13-health-check"
          },
          "dependencies": [
            "google_compute_backend_service.challenge_service",
            "google_compute_global_address.challenge_ip",
            "google_compute_health_check.challenge_healthcheck",
            "google_compute_instance.challenge_server",
            "google_compute_instance_group.challenge_group",
            "google_compute_network.potluckctf_network",
            "google_compute_subnetwork.potluckctf_challenge_subnet",
            "google_compute_target_tcp_proxy.challenge_proxy",
            "google_service_account.challenge_service_account"
          ]
        },
        {
          "index_key": "challenge15",
          "schema_version": 0,
          "attributes": {
            "allow_psc_global_access": false,
            "id": "projects/potluck-ctf/global/forwardingRules/challenge15-forwarding-rule",
            "ip_address": "34.160.151.106",
            "ip_protocol": "TCP",
            "label_fingerprint": "42WmSpB8rSM=",
            "load_balancing_scheme": "EXTERNAL",
            "name": "challenge15-forwarding-rule",
            "port_range": "31337-31337",
            "project": "potluck-ctf",
            "self_link": "https://www.googleapis.com/compute/v1/projects/potluck-ctf/global/forwardingRules/challenge15-forwarding-rule",
            "target": "https://www.googleapis.com/compute/beta/projects/potluck-ctf/global/targetTcpProxies/challenge15-health-check"
          },
          "dependencies": [
            "google_compute_backend_service.challenge_service",
            "google_compute_global_address.challenge_ip",
            "google_compute_health_check.challenge_healthcheck",
            "google_compute_instance.challenge_server",
            "google_compute_instance_group.challenge_group",
            "google_compute_network.potluckctf_network",
            "google_compute_subnetwork.potluckctf_challenge_subnet",
            "google_compute_target_tcp_proxy.challenge_proxy",
            "google_service_account.challenge_service_account"
          ]
        },
        {
          "index_key": "challenge17",
          "schema_version": 0,
          "attributes": {
            "allow_psc_global_access": false,
            "id": "projects/potluck-ctf/global/forwardingRules/challenge17-forwarding-rule",
            "ip_address": "34.120.42.105",
            "ip_protocol": "TCP",
            "label_fingerprint": "42WmSpB8rSM=",
            "load_balancing_scheme": "EXTERNAL",
            "name": "challenge17-forwarding-rule",
            "port_range": "31337-31337",
            "project": "potluck-ctf",
            "self_link": "https://www.googleapis.com/compute/v1/projects/potluck-ctf/global/forwardingRules/challenge17-forwarding-rule",
            "target": "https://www.googleapis.com/compute/beta/projects/potluck-ctf/global/targetTcpProxies/challenge17-health-check"
          },
          "dependencies": [
            "google_compute_backend_service.challenge_service",
            "google_compute_global_address.challenge_ip",
            "google_compute_health_check.challenge_healthcheck",
            "google_compute_instance.challenge_server",
            "google_compute_instance_group.challenge_group",
            "google_compute_network.potluckctf_network",
            "google_compute_subnetwork.potluckctf_challenge_subnet",
            "google_compute_target_tcp_proxy.challenge_proxy",
            "google_service_account.challenge_service_account"
          ]
        },
        {
          "index_key": "challenge18",
          "schema_version": 0,
          "attributes": {
            "allow_psc_global_access": false,
            "id": "projects/potluck-ctf/global/forwardingRules/challenge18-forwarding-rule",
            "ip_address": "34.144.255.97",
            "ip_protocol": "TCP",
            "label_fingerprint": "42WmSpB8rSM=",
            "load_balancing_scheme": "EXTERNAL",
            "name": "challenge18-forwarding-rule",
            "port_range": "31337-31337",
            "project": "potluck-ctf",
            "self_link": "https://www.googleapis.com/compute/v1/projects/potluck-ctf/global/forwardingRules/challenge18-forwarding-rule",
            "target": "https://www.googleapis.com/compute/beta/projects/potluck-ctf/global/targetTcpProxies/challenge18-health-check"
          },
          "dependencies": [
            "google_compute_backend_service.challenge_service",
            "google_compute_global_address.challenge_ip",
            "google_compute_health_check.challenge_healthcheck",
            "google_compute_instance.challenge_server",
            "google_compute_instance_group.challenge_group",
            "google_compute_network.potluckctf_network",
            "google_compute_subnetwork.potluckctf_challenge_subnet",
            "google_compute_target_tcp_proxy.challenge_proxy",
            "google_service_account.challenge_service_account"
          ]
        },
        {
          "index_key": "challenge19",
          "schema_version": 0,
          "attributes": {
            "allow_psc_global_access": false,
            "id": "projects/potluck-ctf/global/forwardingRules/challenge19-forwarding-rule",
            "ip_address": "34.128.154.35",
            "ip_protocol": "TCP",
            "label_fingerprint": "42WmSpB8rSM=",
            "load_balancing_scheme": "EXTERNAL",
            "name": "challenge19-forwarding-rule",
            "port_range": "31337-31337",
            "project": "potluck-ctf",
            "self_link": "https://www.googleapis.com/compute/v1/projects/potluck-ctf/global/forwardingRules/challenge19-forwarding-rule",
            "target": "https://www.googleapis.com/compute/beta/projects/potluck-ctf/global/targetTcpProxies/challenge19-health-check"
          },
          "dependencies": [
            "google_compute_backend_service.challenge_service",
            "google_compute_global_address.challenge_ip",
            "google_compute_health_check.challenge_healthcheck",
            "google_compute_instance.challenge_server",
            "google_compute_instance_group.challenge_group",
            "google_compute_network.potluckctf_network",
            "google_compute_subnetwork.potluckctf_challenge_subnet",
            "google_compute_target_tcp_proxy.challenge_proxy",
            "google_service_account.challenge_service_account"
          ]
        },
        {
          "index_key": "challenge21",
          "schema_version": 0,
          "attributes": {
            "allow_psc_global_access": false,
            "id": "projects/potluck-ctf/global/forwardingRules/challenge21-forwarding-rule",
            "ip_address": "34.36.29.126",
            "ip_protocol": "TCP",
            "label_fingerprint": "42WmSpB8rSM=",
            "load_balancing_scheme": "EXTERNAL",
            "name": "challenge21-forwarding-rule",
            "port_range": "31337-31337",
            "project": "potluck-ctf",
            "self_link": "https://www.googleapis.com/compute/v1/projects/potluck-ctf/global/forwardingRules/challenge21-forwarding-rule",
            "target": "https://www.googleapis.com/compute/beta/projects/potluck-ctf/global/targetTcpProxies/challenge21-health-check"
          },
          "dependencies": [
            "google_compute_backend_service.challenge_service",
            "google_compute_global_address.challenge_ip",
            "google_compute_health_check.challenge_healthcheck",
            "google_compute_instance.challenge_server",
            "google_compute_instance_group.challenge_group",
            "google_compute_network.potluckctf_network",
            "google_compute_subnetwork.potluckctf_challenge_subnet",
            "google_compute_target_tcp_proxy.challenge_proxy",
            "google_service_account.challenge_service_account"
          ]
        },
        {
          "index_key": "challenge22",
          "schema_version": 0,
          "attributes": {
            "allow_psc_global_access": false,
            "id": "projects/potluck-ctf/global/forwardingRules/challenge22-forwarding-rule",
            "ip_address": "34.117.148.182",
            "ip_protocol": "TCP",
            "label_fingerprint": "42WmSpB8rSM=",
            "load_balancing_scheme": "EXTERNAL",
            "name": "challenge22-forwarding-rule",
            "port_range": "31337-31337",
            "project": "potluck-ctf",
            "self_link": "https://www.googleapis.com/compute/v1/projects/potluck-ctf/global/forwardingRules/challenge22-forwarding-rule",
            "target": "https://www.googleapis.com/compute/beta/projects/potluck-ctf/global/targetTcpProxies/challenge22-health-check"
          },
          "dependencies": [
            "google_compute_backend_service.challenge_service",
            "google_compute_global_address.challenge_ip",
            "google_compute_health_check.challenge_healthcheck",
            "google_compute_instance.challenge_server",
            "google_compute_instance_group.challenge_group",
            "google_compute_network.potluckctf_network",
            "google_compute_subnetwork.potluckctf_challenge_subnet",
            "google_compute_target_tcp_proxy.challenge_proxy",
            "google_service_account.challenge_service_account"
          ]
        },
        {
          "index_key": "challenge24",
          "schema_version": 0,
          "attributes": {
            "allow_psc_global_access": false,
            "id": "projects/potluck-ctf/global/forwardingRules/challenge24-forwarding-rule",
            "ip_address": "34.120.15.221",
            "ip_protocol": "TCP",
            "label_fingerprint": "42WmSpB8rSM=",
            "load_balancing_scheme": "EXTERNAL",
            "name": "challenge24-forwarding-rule",
            "port_range": "31337-31337",
            "project": "potluck-ctf",
            "self_link": "https://www.googleapis.com/compute/v1/projects/potluck-ctf/global/forwardingRules/challenge24-forwarding-rule",
            "target": "https://www.googleapis.com/compute/beta/projects/potluck-ctf/global/targetTcpProxies/challenge24-health-check"
          },
          "dependencies": [
            "google_compute_backend_service.challenge_service",
            "google_compute_global_address.challenge_ip",
            "google_compute_health_check.challenge_healthcheck",
            "google_compute_instance.challenge_server",
            "google_compute_instance_group.challenge_group",
            "google_compute_network.potluckctf_network",
            "google_compute_subnetwork.potluckctf_challenge_subnet",
            "google_compute_target_tcp_proxy.challenge_proxy",
            "google_service_account.challenge_service_account"
          ]
        },
        {
          "index_key": "challenge25",
          "schema_version": 0,
          "attributes": {
            "allow_psc_global_access": false,
            "id": "projects/potluck-ctf/global/forwardingRules/challenge25-forwarding-rule",
            "ip_address": "34.102.231.130",
            "ip_protocol": "TCP",
            "label_fingerprint": "42WmSpB8rSM=",
            "load_balancing_scheme": "EXTERNAL",
            "name": "challenge25-forwarding-rule",
            "port_range": "31337-31337",
            "project": "potluck-ctf",
            "self_link": "https://www.googleapis.com/compute/v1/projects/potluck-ctf/global/forwardingRules/challenge25-forwarding-rule",
            "target": "https://www.googleapis.com/compute/beta/projects/potluck-ctf/global/targetTcpProxies/challenge25-health-check"
          },
          "dependencies": [
            "google_compute_backend_service.challenge_service",
            "google_compute_global_address.challenge_ip",
            "google_compute_health_check.challenge_healthcheck",
            "google_compute_instance.challenge_server",
            "google_compute_instance_group.challenge_group",
            "google_compute_network.potluckctf_network",
            "google_compute_subnetwork.potluckctf_challenge_subnet",
            "google_compute_target_tcp_proxy.challenge_proxy",
            "google_service_account.challenge_service_account"
          ]
        },
        {
          "index_key": "challenge26",
          "schema_version": 0,
          "attributes": {
            "allow_psc_global_access": false,
            "id": "projects/potluck-ctf/global/forwardingRules/challenge26-forwarding-rule",
            "ip_address": "35.227.211.43",
            "ip_protocol": "TCP",
            "label_fingerprint": "42WmSpB8rSM=",
            "load_balancing_scheme": "EXTERNAL",
            "name": "challenge26-forwarding-rule",
            "port_range": "31337-31337",
            "project": "potluck-ctf",
            "self_link": "https://www.googleapis.com/compute/v1/projects/potluck-ctf/global/forwardingRules/challenge26-forwarding-rule",
            "target": "https://www.googleapis.com/compute/beta/projects/potluck-ctf/global/targetTcpProxies/challenge26-health-check"
          },
          "dependencies": [
            "google_compute_backend_service.challenge_service",
            "google_compute_global_address.challenge_ip",
            "google_compute_health_check.challenge_healthcheck",
            "google_compute_instance.challenge_server",
            "google_compute_instance_group.challenge_group",
            "google_compute_network.potluckctf_network",
            "google_compute_subnetwork.potluckctf_challenge_subnet",
            "google_compute_target_tcp_proxy.challenge_proxy",
            "google_service_account.challenge_service_account"
          ]
        },
        {
          "index_key": "challenge27",
          "schema_version": 0,
          "attributes": {
            "allow_psc_global_access": false,
            "id": "projects/potluck-ctf/global/forwardingRules/challenge27-forwarding-rule",
            "ip_address": "34.110.200.53",
            "ip_protocol": "TCP",
            "label_fingerprint": "42WmSpB8rSM=",
            "load_balancing_scheme": "EXTERNAL",
            "name": "challenge27-forwarding-rule",
            "port_range": "31337-31337",
            "project": "potluck-ctf",
            "self_link": "https://www.googleapis.com/compute/v1/projects/potluck-ctf/global/forwardingRules/challenge27-forwarding-rule",
            "target": "https://www.googleapis.com/compute/beta/projects/potluck-ctf/global/targetTcpProxies/challenge27-health-check"
          },
          "dependencies": [
            "google_compute_backend_service.challenge_service",
            "google_compute_global_address.challenge_ip",
            "google_compute_health_check.challenge_healthcheck",
            "google_compute_instance.challenge_server",
            "google_compute_instance_group.challenge_group",
            "google_compute_network.potluckctf_network",
            "google_compute_subnetwork.potluckctf_challenge_subnet",
            "google_compute_target_tcp_proxy.challenge_proxy",
            "google_service_account.challenge_service_account"
          ]
        },
        {
          "index_key": "challenge28",
          "schema_version": 0,
          "attributes": {
            "allow_psc_global_access": false,
            "id": "projects/potluck-ctf/global/forwardingRules/challenge28-forwarding-rule",
            "ip_address": "34.144.203.150",
            "ip_protocol": "TCP",
            "label_fingerprint": "42WmSpB8rSM=",
            "load_balancing_scheme": "EXTERNAL",
            "name": "challenge28-forwarding-rule",
            "port_range": "31337-31337",
            "project": "potluck-ctf",
            "self_link": "https://www.googleapis.com/compute/v1/projects/potluck-ctf/global/forwardingRules/challenge28-forwarding-rule",
            "target": "https://www.googleapis.com/compute/beta/projects/potluck-ctf/global/targetTcpProxies/challenge28-health-check"
          },
          "dependencies": [
            "google_compute_backend_service.challenge_service",
            "google_compute_global_address.challenge_ip",
            "google_compute_health_check.challenge_healthcheck",
            "google_compute_instance.challenge_server",
            "google_compute_instance_group.challenge_group",
            "google_compute_network.potluckctf_network",
            "google_compute_subnetwork.potluckctf_challenge_subnet",
            "google_compute_target_tcp_proxy.challenge_proxy",
            "google_service_account.challenge_service_account"
          ]
        },
        {
          "index_key": "challenge29",
          "schema_version": 0,
          "attributes": {
            "allow_psc_global_access": false,
            "id": "projects/potluck-ctf/global/forwardingRules/challenge29-forwarding-rule",
            "ip_address": "34.36.167.111",
            "ip_protocol": "TCP",
            "label_fingerprint": "42WmSpB8rSM=",
            "load_balancing_scheme": "EXTERNAL",
            "name": "challenge29-forwarding-rule",
            "port_range": "31337-31337",
            "project": "potluck-ctf",
            "self_link": "https://www.googleapis.com/compute/v1/projects/potluck-ctf/global/forwardingRules/challenge29-forwarding-rule",
            "target": "https://www.googleapis.com/compute/beta/projects/potluck-ctf/global/targetTcpProxies/challenge29-health-check"
          },
          "dependencies": [
            "google_compute_backend_service.challenge_service",
            "google_compute_global_address.challenge_ip",
            "google_compute_health_check.challenge_healthcheck",
            "google_compute_instance.challenge_server",
            "google_compute_instance_group.challenge_group",
            "google_compute_network.potluckctf_network",
            "google_compute_subnetwork.potluckctf_challenge_subnet",
            "google_compute_target_tcp_proxy.challenge_proxy",
            "google_service_account.challenge_service_account"
          ]
        },
        {
          "index_key": "challenge30",
          "schema_version": 0,
          "attributes": {
            "allow_psc_global_access": false,
            "id": "projects/potluck-ctf/global/forwardingRules/challenge30-forwarding-rule",
            "ip_address": "34.120.220.250",
            "ip_protocol": "TCP",
            "label_fingerprint": "42WmSpB8rSM=",
            "load_balancing_scheme": "EXTERNAL",
            "name": "challenge30-forwarding-rule",
            "port_range": "31337-31337",
            "project": "potluck-ctf",
            "self_link": "https://www.googleapis.com/compute/v1/projects/potluck-ctf/global/forwardingRules/challenge30-forwarding-rule",
            "target": "https://www.googleapis.com/compute/beta/projects/potluck-ctf/global/targetTcpProxies/challenge30-health-check"
          },
          "dependencies": [
            "google_compute_backend_service.challenge_service",
            "google_compute_global_address.challenge_ip",
            "google_compute_health_check.challenge_healthcheck",
            "google_compute_instance.challenge_server",
            "google_compute_instance_group.challenge_group",
            "google_compute_network.potluckctf_network",
            "google_compute_subnetwork.potluckctf_challenge_subnet",
            "google_compute_target_tcp_proxy.challenge_proxy",
            "google_service_account.challenge_service_account"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "challenge_server",
      "provider": "provider[\"registry.terraform.io/hashicorp/google-beta\"]",
      "instances": [
        {
          "index_key": "challenge00-a",
          "schema_version": 6,
          "attributes": {
            "allow_stopping_for_update": true,
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "enable_confidential_compute": false,
                    "image": "https://www.googleapis.com/compute/beta/projects/debian-cloud/global/images/debian-11-bullseye-v20231212",
                    "size": 16,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/potluck-ctf/zones/europe-west3-b/disks/challenge00-a"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "AMD Rome",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "effective_labels": {
              "challenge": "1"
            },
            "enable_display": false,
            "id": "projects/potluck-ctf/zones/europe-west3-b/instances/challenge00-a",
            "instance_id": "1985720416674977940",
            "label_fingerprint": "Q_iIQpWMFMc=",
            "labels": {
              "challenge": "1"
            },
            "machine_type": "e2-standard-8",
            "metadata_fingerprint": "sPgbUE6W0-o=",
            "name": "challenge00-a",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "34.89.167.255",
                    "network_tier": "PREMIUM"
                  }
                ],
                "internal_ipv6_prefix_length": 0,
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/potluck-ctf/global/networks/potluckctf-network",
                "network_ip": "10.0.137.2",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/potluck-ctf/regions/europe-west3/subnetworks/potluckctf-challenge00-subnet",
                "subnetwork_project": "potluck-ctf"
              }
            ],
            "project": "potluck-ctf",
            "scheduling": [
              {
                "automatic_restart": true,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false,
                "provisioning_model": "STANDARD"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/potluck-ctf/zones/europe-west3-b/instances/challenge00-a",
            "service_account": [
              {
                "email": "challenge00-service-account@potluck-ctf.iam.gserviceaccount.com",
                "scopes": [
                  "https://www.googleapis.com/auth/cloud-platform"
                ]
              }
            ],
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "challenge",
              "challenge00",
              "potluckctf"
            ],
            "tags_fingerprint": "PurGMNoPVAk=",
            "terraform_labels": {
              "challenge": "1"
            },
            "zone": "europe-west3-b"
          },
          "dependencies": [
            "google_compute_network.potluckctf_network",
            "google_compute_subnetwork.potluckctf_challenge_subnet",
            "google_service_account.challenge_service_account"
          ]
        },
        {
          "index_key": "challenge01-a",
          "schema_version": 6,
          "attributes": {
            "advanced_machine_features": [
              {
                "enable_nested_virtualization": true,
                "threads_per_core": 0,
                "visible_core_count": 0
              }
            ],
            "allow_stopping_for_update": true,
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "enable_confidential_compute": false,
                    "image": "https://www.googleapis.com/compute/beta/projects/debian-cloud/global/images/debian-11-bullseye-v20231212",
                    "size": 16,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/potluck-ctf/zones/europe-west3-b/disks/challenge01-a"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Cascade Lake",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "effective_labels": {
              "challenge": "1"
            },
            "enable_display": false,
            "id": "projects/potluck-ctf/zones/europe-west3-b/instances/challenge01-a",
            "instance_id": "895627570574727322",
            "label_fingerprint": "Q_iIQpWMFMc=",
            "labels": {
              "challenge": "1"
            },
            "machine_type": "n2-standard-4",
            "metadata_fingerprint": "sPgbUE6W0-o=",
            "name": "challenge01-a",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "34.159.49.118",
                    "network_tier": "PREMIUM"
                  }
                ],
                "internal_ipv6_prefix_length": 0,
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/potluck-ctf/global/networks/potluckctf-network",
                "network_ip": "10.0.1.2",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/potluck-ctf/regions/europe-west3/subnetworks/potluckctf-challenge01-subnet",
                "subnetwork_project": "potluck-ctf"
              }
            ],
            "project": "potluck-ctf",
            "scheduling": [
              {
                "automatic_restart": true,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false,
                "provisioning_model": "STANDARD"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/potluck-ctf/zones/europe-west3-b/instances/challenge01-a",
            "service_account": [
              {
                "email": "challenge01-service-account@potluck-ctf.iam.gserviceaccount.com",
                "scopes": [
                  "https://www.googleapis.com/auth/cloud-platform"
                ]
              }
            ],
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "challenge",
              "challenge01",
              "potluckctf"
            ],
            "tags_fingerprint": "yVQWMsQo3HA=",
            "terraform_labels": {
              "challenge": "1"
            },
            "zone": "europe-west3-b"
          },
          "dependencies": [
            "google_compute_network.potluckctf_network",
            "google_compute_subnetwork.potluckctf_challenge_subnet",
            "google_service_account.challenge_service_account"
          ]
        },
        {
          "index_key": "challenge03-a",
          "schema_version": 6,
          "attributes": {
            "allow_stopping_for_update": true,
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "enable_confidential_compute": false,
                    "image": "https://www.googleapis.com/compute/beta/projects/debian-cloud/global/images/debian-11-bullseye-v20231212",
                    "size": 16,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/potluck-ctf/zones/europe-west3-b/disks/challenge03-a"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Broadwell",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "effective_labels": {
              "challenge": "1"
            },
            "enable_display": false,
            "id": "projects/potluck-ctf/zones/europe-west3-b/instances/challenge03-a",
            "instance_id": "3073617701263317124",
            "label_fingerprint": "Q_iIQpWMFMc=",
            "labels": {
              "challenge": "1"
            },
            "machine_type": "e2-standard-8",
            "metadata_fingerprint": "sPgbUE6W0-o=",
            "name": "challenge03-a",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "34.89.149.2",
                    "network_tier": "PREMIUM"
                  }
                ],
                "internal_ipv6_prefix_length": 0,
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/potluck-ctf/global/networks/potluckctf-network",
                "network_ip": "10.0.3.2",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/potluck-ctf/regions/europe-west3/subnetworks/potluckctf-challenge03-subnet",
                "subnetwork_project": "potluck-ctf"
              }
            ],
            "project": "potluck-ctf",
            "scheduling": [
              {
                "automatic_restart": true,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false,
                "provisioning_model": "STANDARD"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/potluck-ctf/zones/europe-west3-b/instances/challenge03-a",
            "service_account": [
              {
                "email": "challenge03-service-account@potluck-ctf.iam.gserviceaccount.com",
                "scopes": [
                  "https://www.googleapis.com/auth/cloud-platform"
                ]
              }
            ],
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "challenge",
              "challenge03",
              "potluckctf"
            ],
            "tags_fingerprint": "DM8weaEPUVI=",
            "terraform_labels": {
              "challenge": "1"
            },
            "zone": "europe-west3-b"
          },
          "dependencies": [
            "google_compute_network.potluckctf_network",
            "google_compute_subnetwork.potluckctf_challenge_subnet",
            "google_service_account.challenge_service_account"
          ]
        },
        {
          "index_key": "challenge05-a",
          "schema_version": 6,
          "attributes": {
            "allow_stopping_for_update": true,
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "enable_confidential_compute": false,
                    "image": "https://www.googleapis.com/compute/beta/projects/debian-cloud/global/images/debian-11-bullseye-v20231212",
                    "size": 16,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/potluck-ctf/zones/europe-west3-b/disks/challenge05-a"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Broadwell",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "effective_labels": {
              "challenge": "1"
            },
            "enable_display": false,
            "id": "projects/potluck-ctf/zones/europe-west3-b/instances/challenge05-a",
            "instance_id": "4469091097295394965",
            "label_fingerprint": "Q_iIQpWMFMc=",
            "labels": {
              "challenge": "1"
            },
            "machine_type": "e2-standard-8",
            "metadata_fingerprint": "sPgbUE6W0-o=",
            "name": "challenge05-a",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "35.234.68.90",
                    "network_tier": "PREMIUM"
                  }
                ],
                "internal_ipv6_prefix_length": 0,
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/potluck-ctf/global/networks/potluckctf-network",
                "network_ip": "10.0.5.2",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/potluck-ctf/regions/europe-west3/subnetworks/potluckctf-challenge05-subnet",
                "subnetwork_project": "potluck-ctf"
              }
            ],
            "project": "potluck-ctf",
            "scheduling": [
              {
                "automatic_restart": true,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false,
                "provisioning_model": "STANDARD"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/potluck-ctf/zones/europe-west3-b/instances/challenge05-a",
            "service_account": [
              {
                "email": "challenge05-service-account@potluck-ctf.iam.gserviceaccount.com",
                "scopes": [
                  "https://www.googleapis.com/auth/cloud-platform"
                ]
              }
            ],
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "challenge",
              "challenge05",
              "potluckctf"
            ],
            "tags_fingerprint": "h8cVUT_iN0w=",
            "terraform_labels": {
              "challenge": "1"
            },
            "zone": "europe-west3-b"
          },
          "dependencies": [
            "google_compute_network.potluckctf_network",
            "google_compute_subnetwork.potluckctf_challenge_subnet",
            "google_service_account.challenge_service_account"
          ]
        },
        {
          "index_key": "challenge06-a",
          "schema_version": 6,
          "attributes": {
            "allow_stopping_for_update": true,
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "enable_confidential_compute": false,
                    "image": "https://www.googleapis.com/compute/beta/projects/debian-cloud/global/images/debian-11-bullseye-v20231212",
                    "size": 16,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/potluck-ctf/zones/europe-west3-b/disks/challenge06-a"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Broadwell",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "effective_labels": {
              "challenge": "1"
            },
            "enable_display": false,
            "id": "projects/potluck-ctf/zones/europe-west3-b/instances/challenge06-a",
            "instance_id": "6276885893523904666",
            "label_fingerprint": "Q_iIQpWMFMc=",
            "labels": {
              "challenge": "1"
            },
            "machine_type": "e2-standard-8",
            "metadata_fingerprint": "sPgbUE6W0-o=",
            "name": "challenge06-a",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "35.246.230.27",
                    "network_tier": "PREMIUM"
                  }
                ],
                "internal_ipv6_prefix_length": 0,
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/potluck-ctf/global/networks/potluckctf-network",
                "network_ip": "10.0.6.2",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/potluck-ctf/regions/europe-west3/subnetworks/potluckctf-challenge06-subnet",
                "subnetwork_project": "potluck-ctf"
              }
            ],
            "project": "potluck-ctf",
            "scheduling": [
              {
                "automatic_restart": true,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false,
                "provisioning_model": "STANDARD"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/potluck-ctf/zones/europe-west3-b/instances/challenge06-a",
            "service_account": [
              {
                "email": "challenge06-service-account@potluck-ctf.iam.gserviceaccount.com",
                "scopes": [
                  "https://www.googleapis.com/auth/cloud-platform"
                ]
              }
            ],
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "challenge",
              "challenge06",
              "potluckctf"
            ],
            "tags_fingerprint": "1vMBKFpzGAA=",
            "terraform_labels": {
              "challenge": "1"
            },
            "zone": "europe-west3-b"
          },
          "dependencies": [
            "google_compute_network.potluckctf_network",
            "google_compute_subnetwork.potluckctf_challenge_subnet",
            "google_service_account.challenge_service_account"
          ]
        },
        {
          "index_key": "challenge07-a",
          "schema_version": 6,
          "attributes": {
            "allow_stopping_for_update": true,
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "enable_confidential_compute": false,
                    "image": "https://www.googleapis.com/compute/beta/projects/debian-cloud/global/images/debian-11-bullseye-v20231212",
                    "size": 16,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/potluck-ctf/zones/europe-west3-b/disks/challenge07-a"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Broadwell",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "effective_labels": {
              "challenge": "1"
            },
            "enable_display": false,
            "id": "projects/potluck-ctf/zones/europe-west3-b/instances/challenge07-a",
            "instance_id": "8561607374562334873",
            "label_fingerprint": "Q_iIQpWMFMc=",
            "labels": {
              "challenge": "1"
            },
            "machine_type": "e2-standard-8",
            "metadata_fingerprint": "sPgbUE6W0-o=",
            "name": "challenge07-a",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "35.246.209.96",
                    "network_tier": "PREMIUM"
                  }
                ],
                "internal_ipv6_prefix_length": 0,
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/potluck-ctf/global/networks/potluckctf-network",
                "network_ip": "10.0.7.2",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/potluck-ctf/regions/europe-west3/subnetworks/potluckctf-challenge07-subnet",
                "subnetwork_project": "potluck-ctf"
              }
            ],
            "project": "potluck-ctf",
            "scheduling": [
              {
                "automatic_restart": true,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false,
                "provisioning_model": "STANDARD"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/potluck-ctf/zones/europe-west3-b/instances/challenge07-a",
            "service_account": [
              {
                "email": "challenge07-service-account@potluck-ctf.iam.gserviceaccount.com",
                "scopes": [
                  "https://www.googleapis.com/auth/cloud-platform"
                ]
              }
            ],
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "challenge",
              "challenge07",
              "potluckctf"
            ],
            "tags_fingerprint": "mxoyYBrElnQ=",
            "terraform_labels": {
              "challenge": "1"
            },
            "zone": "europe-west3-b"
          },
          "dependencies": [
            "google_compute_network.potluckctf_network",
            "google_compute_subnetwork.potluckctf_challenge_subnet",
            "google_service_account.challenge_service_account"
          ]
        },
        {
          "index_key": "challenge09-a",
          "schema_version": 6,
          "attributes": {
            "allow_stopping_for_update": true,
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "enable_confidential_compute": false,
                    "image": "https://www.googleapis.com/compute/beta/projects/debian-cloud/global/images/debian-11-bullseye-v20231212",
                    "size": 16,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/potluck-ctf/zones/europe-west3-b/disks/challenge09-a"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Broadwell",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "effective_labels": {
              "challenge": "1"
            },
            "enable_display": false,
            "id": "projects/potluck-ctf/zones/europe-west3-b/instances/challenge09-a",
            "instance_id": "6335896429183572124",
            "label_fingerprint": "Q_iIQpWMFMc=",
            "labels": {
              "challenge": "1"
            },
            "machine_type": "e2-standard-8",
            "metadata_fingerprint": "sPgbUE6W0-o=",
            "name": "challenge09-a",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "35.234.113.254",
                    "network_tier": "PREMIUM"
                  }
                ],
                "internal_ipv6_prefix_length": 0,
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/potluck-ctf/global/networks/potluckctf-network",
                "network_ip": "10.0.9.2",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/potluck-ctf/regions/europe-west3/subnetworks/potluckctf-challenge09-subnet",
                "subnetwork_project": "potluck-ctf"
              }
            ],
            "project": "potluck-ctf",
            "scheduling": [
              {
                "automatic_restart": true,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false,
                "provisioning_model": "STANDARD"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/potluck-ctf/zones/europe-west3-b/instances/challenge09-a",
            "service_account": [
              {
                "email": "challenge09-service-account@potluck-ctf.iam.gserviceaccount.com",
                "scopes": [
                  "https://www.googleapis.com/auth/cloud-platform"
                ]
              }
            ],
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "challenge",
              "challenge09",
              "potluckctf"
            ],
            "tags_fingerprint": "sml8MgUpKPk=",
            "terraform_labels": {
              "challenge": "1"
            },
            "zone": "europe-west3-b"
          },
          "dependencies": [
            "google_compute_network.potluckctf_network",
            "google_compute_subnetwork.potluckctf_challenge_subnet",
            "google_service_account.challenge_service_account"
          ]
        },
        {
          "index_key": "challenge11-a",
          "schema_version": 6,
          "attributes": {
            "allow_stopping_for_update": true,
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "enable_confidential_compute": false,
                    "image": "https://www.googleapis.com/compute/beta/projects/debian-cloud/global/images/debian-11-bullseye-v20231212",
                    "size": 16,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/potluck-ctf/zones/europe-west3-b/disks/challenge11-a"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Broadwell",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "effective_labels": {
              "challenge": "1"
            },
            "enable_display": false,
            "id": "projects/potluck-ctf/zones/europe-west3-b/instances/challenge11-a",
            "instance_id": "8616007168340465819",
            "label_fingerprint": "Q_iIQpWMFMc=",
            "labels": {
              "challenge": "1"
            },
            "machine_type": "e2-standard-8",
            "metadata_fingerprint": "sPgbUE6W0-o=",
            "name": "challenge11-a",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "34.107.1.179",
                    "network_tier": "PREMIUM"
                  }
                ],
                "internal_ipv6_prefix_length": 0,
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/potluck-ctf/global/networks/potluckctf-network",
                "network_ip": "10.0.11.2",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/potluck-ctf/regions/europe-west3/subnetworks/potluckctf-challenge11-subnet",
                "subnetwork_project": "potluck-ctf"
              }
            ],
            "project": "potluck-ctf",
            "scheduling": [
              {
                "automatic_restart": true,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false,
                "provisioning_model": "STANDARD"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/potluck-ctf/zones/europe-west3-b/instances/challenge11-a",
            "service_account": [
              {
                "email": "challenge11-service-account@potluck-ctf.iam.gserviceaccount.com",
                "scopes": [
                  "https://www.googleapis.com/auth/cloud-platform"
                ]
              }
            ],
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "challenge",
              "challenge11",
              "potluckctf"
            ],
            "tags_fingerprint": "3bTOJQqaLGk=",
            "terraform_labels": {
              "challenge": "1"
            },
            "zone": "europe-west3-b"
          },
          "dependencies": [
            "google_compute_network.potluckctf_network",
            "google_compute_subnetwork.potluckctf_challenge_subnet",
            "google_service_account.challenge_service_account"
          ]
        },
        {
          "index_key": "challenge12-a",
          "schema_version": 6,
          "attributes": {
            "allow_stopping_for_update": true,
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "enable_confidential_compute": false,
                    "image": "https://www.googleapis.com/compute/beta/projects/debian-cloud/global/images/debian-11-bullseye-v20231212",
                    "size": 16,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/potluck-ctf/zones/europe-west3-b/disks/challenge12-a"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Broadwell",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "effective_labels": {
              "challenge": "1"
            },
            "enable_display": false,
            "id": "projects/potluck-ctf/zones/europe-west3-b/instances/challenge12-a",
            "instance_id": "5606982806231521382",
            "label_fingerprint": "Q_iIQpWMFMc=",
            "labels": {
              "challenge": "1"
            },
            "machine_type": "e2-standard-8",
            "metadata_fingerprint": "sPgbUE6W0-o=",
            "name": "challenge12-a",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "34.107.115.59",
                    "network_tier": "PREMIUM"
                  }
                ],
                "internal_ipv6_prefix_length": 0,
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/potluck-ctf/global/networks/potluckctf-network",
                "network_ip": "10.0.12.2",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/potluck-ctf/regions/europe-west3/subnetworks/potluckctf-challenge12-subnet",
                "subnetwork_project": "potluck-ctf"
              }
            ],
            "project": "potluck-ctf",
            "scheduling": [
              {
                "automatic_restart": true,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false,
                "provisioning_model": "STANDARD"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/potluck-ctf/zones/europe-west3-b/instances/challenge12-a",
            "service_account": [
              {
                "email": "challenge12-service-account@potluck-ctf.iam.gserviceaccount.com",
                "scopes": [
                  "https://www.googleapis.com/auth/cloud-platform"
                ]
              }
            ],
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "challenge",
              "challenge12",
              "potluckctf"
            ],
            "tags_fingerprint": "kbk_R3Nw8H4=",
            "terraform_labels": {
              "challenge": "1"
            },
            "zone": "europe-west3-b"
          },
          "dependencies": [
            "google_compute_network.potluckctf_network",
            "google_compute_subnetwork.potluckctf_challenge_subnet",
            "google_service_account.challenge_service_account"
          ]
        },
        {
          "index_key": "challenge13-a",
          "schema_version": 6,
          "attributes": {
            "allow_stopping_for_update": true,
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "enable_confidential_compute": false,
                    "image": "https://www.googleapis.com/compute/beta/projects/debian-cloud/global/images/debian-11-bullseye-v20231212",
                    "size": 16,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/potluck-ctf/zones/europe-west3-b/disks/challenge13-a"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Broadwell",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "effective_labels": {
              "challenge": "1"
            },
            "enable_display": false,
            "id": "projects/potluck-ctf/zones/europe-west3-b/instances/challenge13-a",
            "instance_id": "5528237978178492524",
            "label_fingerprint": "Q_iIQpWMFMc=",
            "labels": {
              "challenge": "1"
            },
            "machine_type": "e2-standard-8",
            "metadata_fingerprint": "sPgbUE6W0-o=",
            "name": "challenge13-a",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "34.159.67.4",
                    "network_tier": "PREMIUM"
                  }
                ],
                "internal_ipv6_prefix_length": 0,
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/potluck-ctf/global/networks/potluckctf-network",
                "network_ip": "10.0.13.2",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/potluck-ctf/regions/europe-west3/subnetworks/potluckctf-challenge13-subnet",
                "subnetwork_project": "potluck-ctf"
              }
            ],
            "project": "potluck-ctf",
            "scheduling": [
              {
                "automatic_restart": true,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false,
                "provisioning_model": "STANDARD"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/potluck-ctf/zones/europe-west3-b/instances/challenge13-a",
            "service_account": [
              {
                "email": "challenge13-service-account@potluck-ctf.iam.gserviceaccount.com",
                "scopes": [
                  "https://www.googleapis.com/auth/cloud-platform"
                ]
              }
            ],
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "challenge",
              "challenge13",
              "potluckctf"
            ],
            "tags_fingerprint": "P8j73rTcRYE=",
            "terraform_labels": {
              "challenge": "1"
            },
            "zone": "europe-west3-b"
          },
          "dependencies": [
            "google_compute_network.potluckctf_network",
            "google_compute_subnetwork.potluckctf_challenge_subnet",
            "google_service_account.challenge_service_account"
          ]
        },
        {
          "index_key": "challenge15-a",
          "schema_version": 6,
          "attributes": {
            "allow_stopping_for_update": true,
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "enable_confidential_compute": false,
                    "image": "https://www.googleapis.com/compute/beta/projects/debian-cloud/global/images/debian-11-bullseye-v20231212",
                    "size": 16,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/potluck-ctf/zones/europe-west3-b/disks/challenge15-a"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Broadwell",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "effective_labels": {
              "challenge": "1"
            },
            "enable_display": false,
            "id": "projects/potluck-ctf/zones/europe-west3-b/instances/challenge15-a",
            "instance_id": "8239122379367192683",
            "label_fingerprint": "Q_iIQpWMFMc=",
            "labels": {
              "challenge": "1"
            },
            "machine_type": "e2-standard-8",
            "metadata_fingerprint": "sPgbUE6W0-o=",
            "name": "challenge15-a",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "34.107.15.33",
                    "network_tier": "PREMIUM"
                  }
                ],
                "internal_ipv6_prefix_length": 0,
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/potluck-ctf/global/networks/potluckctf-network",
                "network_ip": "10.0.15.2",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/potluck-ctf/regions/europe-west3/subnetworks/potluckctf-challenge15-subnet",
                "subnetwork_project": "potluck-ctf"
              }
            ],
            "project": "potluck-ctf",
            "scheduling": [
              {
                "automatic_restart": true,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false,
                "provisioning_model": "STANDARD"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/potluck-ctf/zones/europe-west3-b/instances/challenge15-a",
            "service_account": [
              {
                "email": "challenge15-service-account@potluck-ctf.iam.gserviceaccount.com",
                "scopes": [
                  "https://www.googleapis.com/auth/cloud-platform"
                ]
              }
            ],
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "challenge",
              "challenge15",
              "potluckctf"
            ],
            "tags_fingerprint": "gJ3O_4V0a-A=",
            "terraform_labels": {
              "challenge": "1"
            },
            "zone": "europe-west3-b"
          },
          "dependencies": [
            "google_compute_network.potluckctf_network",
            "google_compute_subnetwork.potluckctf_challenge_subnet",
            "google_service_account.challenge_service_account"
          ]
        },
        {
          "index_key": "challenge17-a",
          "schema_version": 6,
          "attributes": {
            "allow_stopping_for_update": true,
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "enable_confidential_compute": false,
                    "image": "https://www.googleapis.com/compute/beta/projects/ubuntu-os-cloud/global/images/ubuntu-2204-jammy-v20231213a",
                    "size": 16,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/potluck-ctf/zones/europe-west3-b/disks/challenge17-a"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Broadwell",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "effective_labels": {
              "challenge": "1"
            },
            "enable_display": false,
            "id": "projects/potluck-ctf/zones/europe-west3-b/instances/challenge17-a",
            "instance_id": "2365806412277225455",
            "label_fingerprint": "Q_iIQpWMFMc=",
            "labels": {
              "challenge": "1"
            },
            "machine_type": "e2-standard-8",
            "metadata_fingerprint": "sPgbUE6W0-o=",
            "name": "challenge17-a",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "34.141.7.47",
                    "network_tier": "PREMIUM"
                  }
                ],
                "internal_ipv6_prefix_length": 0,
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/potluck-ctf/global/networks/potluckctf-network",
                "network_ip": "10.0.17.3",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/potluck-ctf/regions/europe-west3/subnetworks/potluckctf-challenge17-subnet",
                "subnetwork_project": "potluck-ctf"
              }
            ],
            "project": "potluck-ctf",
            "scheduling": [
              {
                "automatic_restart": true,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false,
                "provisioning_model": "STANDARD"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/potluck-ctf/zones/europe-west3-b/instances/challenge17-a",
            "service_account": [
              {
                "email": "challenge17-service-account@potluck-ctf.iam.gserviceaccount.com",
                "scopes": [
                  "https://www.googleapis.com/auth/cloud-platform"
                ]
              }
            ],
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "challenge",
              "challenge17",
              "potluckctf"
            ],
            "tags_fingerprint": "tbY5184n0iw=",
            "terraform_labels": {
              "challenge": "1"
            },
            "zone": "europe-west3-b"
          },
          "dependencies": [
            "google_compute_network.potluckctf_network",
            "google_compute_subnetwork.potluckctf_challenge_subnet",
            "google_service_account.challenge_service_account"
          ]
        },
        {
          "index_key": "challenge18-a",
          "schema_version": 6,
          "attributes": {
            "allow_stopping_for_update": true,
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "enable_confidential_compute": false,
                    "image": "https://www.googleapis.com/compute/beta/projects/debian-cloud/global/images/debian-11-bullseye-v20231212",
                    "size": 16,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/potluck-ctf/zones/europe-west3-b/disks/challenge18-a"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Broadwell",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "effective_labels": {
              "challenge": "1"
            },
            "enable_display": false,
            "id": "projects/potluck-ctf/zones/europe-west3-b/instances/challenge18-a",
            "instance_id": "4276227192891316355",
            "label_fingerprint": "Q_iIQpWMFMc=",
            "labels": {
              "challenge": "1"
            },
            "machine_type": "e2-standard-8",
            "metadata_fingerprint": "sPgbUE6W0-o=",
            "name": "challenge18-a",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "35.242.204.156",
                    "network_tier": "PREMIUM"
                  }
                ],
                "internal_ipv6_prefix_length": 0,
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/potluck-ctf/global/networks/potluckctf-network",
                "network_ip": "10.0.18.2",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/potluck-ctf/regions/europe-west3/subnetworks/potluckctf-challenge18-subnet",
                "subnetwork_project": "potluck-ctf"
              }
            ],
            "project": "potluck-ctf",
            "scheduling": [
              {
                "automatic_restart": true,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false,
                "provisioning_model": "STANDARD"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/potluck-ctf/zones/europe-west3-b/instances/challenge18-a",
            "service_account": [
              {
                "email": "challenge18-service-account@potluck-ctf.iam.gserviceaccount.com",
                "scopes": [
                  "https://www.googleapis.com/auth/cloud-platform"
                ]
              }
            ],
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "challenge",
              "challenge18",
              "potluckctf"
            ],
            "tags_fingerprint": "7kzJ6VWIicE=",
            "terraform_labels": {
              "challenge": "1"
            },
            "zone": "europe-west3-b"
          },
          "dependencies": [
            "google_compute_network.potluckctf_network",
            "google_compute_subnetwork.potluckctf_challenge_subnet",
            "google_service_account.challenge_service_account"
          ]
        },
        {
          "index_key": "challenge19-a",
          "schema_version": 6,
          "attributes": {
            "allow_stopping_for_update": true,
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "enable_confidential_compute": false,
                    "image": "https://www.googleapis.com/compute/beta/projects/debian-cloud/global/images/debian-11-bullseye-v20231212",
                    "size": 16,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/potluck-ctf/zones/europe-west3-b/disks/challenge19-a"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Broadwell",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "effective_labels": {
              "challenge": "1"
            },
            "enable_display": false,
            "id": "projects/potluck-ctf/zones/europe-west3-b/instances/challenge19-a",
            "instance_id": "1295276759958624365",
            "label_fingerprint": "Q_iIQpWMFMc=",
            "labels": {
              "challenge": "1"
            },
            "machine_type": "e2-standard-8",
            "metadata_fingerprint": "sPgbUE6W0-o=",
            "name": "challenge19-a",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "34.141.48.58",
                    "network_tier": "PREMIUM"
                  }
                ],
                "internal_ipv6_prefix_length": 0,
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/potluck-ctf/global/networks/potluckctf-network",
                "network_ip": "10.0.19.2",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/potluck-ctf/regions/europe-west3/subnetworks/potluckctf-challenge19-subnet",
                "subnetwork_project": "potluck-ctf"
              }
            ],
            "project": "potluck-ctf",
            "scheduling": [
              {
                "automatic_restart": true,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false,
                "provisioning_model": "STANDARD"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/potluck-ctf/zones/europe-west3-b/instances/challenge19-a",
            "service_account": [
              {
                "email": "challenge19-service-account@potluck-ctf.iam.gserviceaccount.com",
                "scopes": [
                  "https://www.googleapis.com/auth/cloud-platform"
                ]
              }
            ],
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "challenge",
              "challenge19",
              "potluckctf"
            ],
            "tags_fingerprint": "zIp1VY04wDM=",
            "terraform_labels": {
              "challenge": "1"
            },
            "zone": "europe-west3-b"
          },
          "dependencies": [
            "google_compute_network.potluckctf_network",
            "google_compute_subnetwork.potluckctf_challenge_subnet",
            "google_service_account.challenge_service_account"
          ]
        },
        {
          "index_key": "challenge21-a",
          "schema_version": 6,
          "attributes": {
            "allow_stopping_for_update": true,
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "enable_confidential_compute": false,
                    "image": "https://www.googleapis.com/compute/beta/projects/debian-cloud/global/images/debian-11-bullseye-v20231212",
                    "size": 16,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/potluck-ctf/zones/europe-west3-b/disks/challenge21-a"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Broadwell",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "effective_labels": {
              "challenge": "1"
            },
            "enable_display": false,
            "id": "projects/potluck-ctf/zones/europe-west3-b/instances/challenge21-a",
            "instance_id": "8703594496537346267",
            "label_fingerprint": "Q_iIQpWMFMc=",
            "labels": {
              "challenge": "1"
            },
            "machine_type": "e2-standard-8",
            "metadata_fingerprint": "sPgbUE6W0-o=",
            "name": "challenge21-a",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "35.198.76.38",
                    "network_tier": "PREMIUM"
                  }
                ],
                "internal_ipv6_prefix_length": 0,
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/potluck-ctf/global/networks/potluckctf-network",
                "network_ip": "10.0.21.3",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/potluck-ctf/regions/europe-west3/subnetworks/potluckctf-challenge21-subnet",
                "subnetwork_project": "potluck-ctf"
              }
            ],
            "project": "potluck-ctf",
            "scheduling": [
              {
                "automatic_restart": true,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false,
                "provisioning_model": "STANDARD"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/potluck-ctf/zones/europe-west3-b/instances/challenge21-a",
            "service_account": [
              {
                "email": "challenge21-service-account@potluck-ctf.iam.gserviceaccount.com",
                "scopes": [
                  "https://www.googleapis.com/auth/cloud-platform"
                ]
              }
            ],
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "challenge",
              "challenge21",
              "potluckctf"
            ],
            "tags_fingerprint": "Jnkn2L-6XxI=",
            "terraform_labels": {
              "challenge": "1"
            },
            "zone": "europe-west3-b"
          },
          "dependencies": [
            "google_compute_network.potluckctf_network",
            "google_compute_subnetwork.potluckctf_challenge_subnet",
            "google_service_account.challenge_service_account"
          ]
        },
        {
          "index_key": "challenge22-a",
          "schema_version": 6,
          "attributes": {
            "allow_stopping_for_update": true,
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "enable_confidential_compute": false,
                    "image": "https://www.googleapis.com/compute/beta/projects/debian-cloud/global/images/debian-11-bullseye-v20231212",
                    "size": 16,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/potluck-ctf/zones/europe-west3-b/disks/challenge22-a"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Broadwell",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "effective_labels": {
              "challenge": "1"
            },
            "enable_display": false,
            "id": "projects/potluck-ctf/zones/europe-west3-b/instances/challenge22-a",
            "instance_id": "5879035277529782371",
            "label_fingerprint": "Q_iIQpWMFMc=",
            "labels": {
              "challenge": "1"
            },
            "machine_type": "e2-standard-8",
            "metadata_fingerprint": "sPgbUE6W0-o=",
            "name": "challenge22-a",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "34.159.87.221",
                    "network_tier": "PREMIUM"
                  }
                ],
                "internal_ipv6_prefix_length": 0,
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/potluck-ctf/global/networks/potluckctf-network",
                "network_ip": "10.0.22.2",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/potluck-ctf/regions/europe-west3/subnetworks/potluckctf-challenge22-subnet",
                "subnetwork_project": "potluck-ctf"
              }
            ],
            "project": "potluck-ctf",
            "scheduling": [
              {
                "automatic_restart": true,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false,
                "provisioning_model": "STANDARD"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/potluck-ctf/zones/europe-west3-b/instances/challenge22-a",
            "service_account": [
              {
                "email": "challenge22-service-account@potluck-ctf.iam.gserviceaccount.com",
                "scopes": [
                  "https://www.googleapis.com/auth/cloud-platform"
                ]
              }
            ],
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "challenge",
              "challenge22",
              "potluckctf"
            ],
            "tags_fingerprint": "7z0bzJk3iho=",
            "terraform_labels": {
              "challenge": "1"
            },
            "zone": "europe-west3-b"
          },
          "dependencies": [
            "google_compute_network.potluckctf_network",
            "google_compute_subnetwork.potluckctf_challenge_subnet",
            "google_service_account.challenge_service_account"
          ]
        },
        {
          "index_key": "challenge22-b",
          "schema_version": 6,
          "attributes": {
            "allow_stopping_for_update": true,
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "enable_confidential_compute": false,
                    "image": "https://www.googleapis.com/compute/beta/projects/debian-cloud/global/images/debian-11-bullseye-v20231212",
                    "size": 16,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/potluck-ctf/zones/europe-west3-b/disks/challenge22-b"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Broadwell",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "effective_labels": {
              "challenge": "1"
            },
            "enable_display": false,
            "id": "projects/potluck-ctf/zones/europe-west3-b/instances/challenge22-b",
            "instance_id": "150248855485772809",
            "label_fingerprint": "Q_iIQpWMFMc=",
            "labels": {
              "challenge": "1"
            },
            "machine_type": "e2-standard-8",
            "metadata_fingerprint": "sPgbUE6W0-o=",
            "name": "challenge22-b",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "35.234.101.35",
                    "network_tier": "PREMIUM"
                  }
                ],
                "internal_ipv6_prefix_length": 0,
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/potluck-ctf/global/networks/potluckctf-network",
                "network_ip": "10.0.22.3",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/potluck-ctf/regions/europe-west3/subnetworks/potluckctf-challenge22-subnet",
                "subnetwork_project": "potluck-ctf"
              }
            ],
            "project": "potluck-ctf",
            "scheduling": [
              {
                "automatic_restart": true,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false,
                "provisioning_model": "STANDARD"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/potluck-ctf/zones/europe-west3-b/instances/challenge22-b",
            "service_account": [
              {
                "email": "challenge22-service-account@potluck-ctf.iam.gserviceaccount.com",
                "scopes": [
                  "https://www.googleapis.com/auth/cloud-platform"
                ]
              }
            ],
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "challenge",
              "challenge22",
              "potluckctf"
            ],
            "tags_fingerprint": "7z0bzJk3iho=",
            "terraform_labels": {
              "challenge": "1"
            },
            "zone": "europe-west3-b"
          },
          "dependencies": [
            "google_compute_network.potluckctf_network",
            "google_compute_subnetwork.potluckctf_challenge_subnet",
            "google_service_account.challenge_service_account"
          ]
        },
        {
          "index_key": "challenge24-a",
          "schema_version": 6,
          "attributes": {
            "allow_stopping_for_update": true,
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "enable_confidential_compute": false,
                    "image": "https://www.googleapis.com/compute/beta/projects/debian-cloud/global/images/debian-11-bullseye-v20231212",
                    "size": 16,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/potluck-ctf/zones/europe-west3-b/disks/challenge24-a"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Broadwell",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "effective_labels": {
              "challenge": "1"
            },
            "enable_display": false,
            "id": "projects/potluck-ctf/zones/europe-west3-b/instances/challenge24-a",
            "instance_id": "8870158087099979885",
            "label_fingerprint": "Q_iIQpWMFMc=",
            "labels": {
              "challenge": "1"
            },
            "machine_type": "e2-standard-8",
            "metadata_fingerprint": "sPgbUE6W0-o=",
            "name": "challenge24-a",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "34.159.220.222",
                    "network_tier": "PREMIUM"
                  }
                ],
                "internal_ipv6_prefix_length": 0,
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/potluck-ctf/global/networks/potluckctf-network",
                "network_ip": "10.0.24.2",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/potluck-ctf/regions/europe-west3/subnetworks/potluckctf-challenge24-subnet",
                "subnetwork_project": "potluck-ctf"
              }
            ],
            "project": "potluck-ctf",
            "scheduling": [
              {
                "automatic_restart": true,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false,
                "provisioning_model": "STANDARD"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/potluck-ctf/zones/europe-west3-b/instances/challenge24-a",
            "service_account": [
              {
                "email": "challenge24-service-account@potluck-ctf.iam.gserviceaccount.com",
                "scopes": [
                  "https://www.googleapis.com/auth/cloud-platform"
                ]
              }
            ],
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "challenge",
              "challenge24",
              "potluckctf"
            ],
            "tags_fingerprint": "KcVnU3RrHQA=",
            "terraform_labels": {
              "challenge": "1"
            },
            "zone": "europe-west3-b"
          },
          "dependencies": [
            "google_compute_network.potluckctf_network",
            "google_compute_subnetwork.potluckctf_challenge_subnet",
            "google_service_account.challenge_service_account"
          ]
        },
        {
          "index_key": "challenge25-a",
          "schema_version": 6,
          "attributes": {
            "advanced_machine_features": [
              {
                "enable_nested_virtualization": true,
                "threads_per_core": 0,
                "visible_core_count": 0
              }
            ],
            "allow_stopping_for_update": true,
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "enable_confidential_compute": false,
                    "image": "https://www.googleapis.com/compute/beta/projects/debian-cloud/global/images/debian-11-bullseye-v20231212",
                    "size": 16,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/potluck-ctf/zones/europe-west3-b/disks/challenge25-a"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Cascade Lake",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "effective_labels": {
              "challenge": "1"
            },
            "enable_display": false,
            "id": "projects/potluck-ctf/zones/europe-west3-b/instances/challenge25-a",
            "instance_id": "7950892162129270939",
            "label_fingerprint": "Q_iIQpWMFMc=",
            "labels": {
              "challenge": "1"
            },
            "machine_type": "n2-standard-4",
            "metadata_fingerprint": "sPgbUE6W0-o=",
            "name": "challenge25-a",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "35.198.180.137",
                    "network_tier": "PREMIUM"
                  }
                ],
                "internal_ipv6_prefix_length": 0,
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/potluck-ctf/global/networks/potluckctf-network",
                "network_ip": "10.0.25.2",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/potluck-ctf/regions/europe-west3/subnetworks/potluckctf-challenge25-subnet",
                "subnetwork_project": "potluck-ctf"
              }
            ],
            "project": "potluck-ctf",
            "scheduling": [
              {
                "automatic_restart": true,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false,
                "provisioning_model": "STANDARD"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/potluck-ctf/zones/europe-west3-b/instances/challenge25-a",
            "service_account": [
              {
                "email": "challenge25-service-account@potluck-ctf.iam.gserviceaccount.com",
                "scopes": [
                  "https://www.googleapis.com/auth/cloud-platform"
                ]
              }
            ],
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "challenge",
              "challenge25",
              "potluckctf"
            ],
            "tags_fingerprint": "VhwzR7OvMbk=",
            "terraform_labels": {
              "challenge": "1"
            },
            "zone": "europe-west3-b"
          },
          "dependencies": [
            "google_compute_network.potluckctf_network",
            "google_compute_subnetwork.potluckctf_challenge_subnet",
            "google_service_account.challenge_service_account"
          ]
        },
        {
          "index_key": "challenge26-a",
          "schema_version": 6,
          "attributes": {
            "allow_stopping_for_update": true,
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "enable_confidential_compute": false,
                    "image": "https://www.googleapis.com/compute/beta/projects/debian-cloud/global/images/debian-11-bullseye-v20231212",
                    "size": 16,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/potluck-ctf/zones/europe-west3-b/disks/challenge26-a"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "AMD Rome",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "effective_labels": {
              "challenge": "1"
            },
            "enable_display": false,
            "id": "projects/potluck-ctf/zones/europe-west3-b/instances/challenge26-a",
            "instance_id": "6352933735518115948",
            "label_fingerprint": "Q_iIQpWMFMc=",
            "labels": {
              "challenge": "1"
            },
            "machine_type": "e2-standard-8",
            "metadata_fingerprint": "sPgbUE6W0-o=",
            "name": "challenge26-a",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "35.198.125.72",
                    "network_tier": "PREMIUM"
                  }
                ],
                "internal_ipv6_prefix_length": 0,
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/potluck-ctf/global/networks/potluckctf-network",
                "network_ip": "10.0.26.2",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/potluck-ctf/regions/europe-west3/subnetworks/potluckctf-challenge26-subnet",
                "subnetwork_project": "potluck-ctf"
              }
            ],
            "project": "potluck-ctf",
            "scheduling": [
              {
                "automatic_restart": true,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false,
                "provisioning_model": "STANDARD"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/potluck-ctf/zones/europe-west3-b/instances/challenge26-a",
            "service_account": [
              {
                "email": "challenge26-service-account@potluck-ctf.iam.gserviceaccount.com",
                "scopes": [
                  "https://www.googleapis.com/auth/cloud-platform"
                ]
              }
            ],
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "challenge",
              "challenge26",
              "potluckctf"
            ],
            "tags_fingerprint": "l-WlO0R-Dak=",
            "terraform_labels": {
              "challenge": "1"
            },
            "zone": "europe-west3-b"
          },
          "dependencies": [
            "google_compute_network.potluckctf_network",
            "google_compute_subnetwork.potluckctf_challenge_subnet",
            "google_service_account.challenge_service_account"
          ]
        },
        {
          "index_key": "challenge27-a",
          "schema_version": 6,
          "attributes": {
            "allow_stopping_for_update": true,
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "enable_confidential_compute": false,
                    "image": "https://www.googleapis.com/compute/beta/projects/debian-cloud/global/images/debian-11-bullseye-v20231212",
                    "size": 16,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/potluck-ctf/zones/europe-west3-b/disks/challenge27-a"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Broadwell",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "effective_labels": {
              "challenge": "1"
            },
            "enable_display": false,
            "id": "projects/potluck-ctf/zones/europe-west3-b/instances/challenge27-a",
            "instance_id": "8324338434645104789",
            "label_fingerprint": "Q_iIQpWMFMc=",
            "labels": {
              "challenge": "1"
            },
            "machine_type": "e2-standard-8",
            "metadata_fingerprint": "sPgbUE6W0-o=",
            "name": "challenge27-a",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "34.107.119.26",
                    "network_tier": "PREMIUM"
                  }
                ],
                "internal_ipv6_prefix_length": 0,
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/potluck-ctf/global/networks/potluckctf-network",
                "network_ip": "10.0.27.2",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/potluck-ctf/regions/europe-west3/subnetworks/potluckctf-challenge27-subnet",
                "subnetwork_project": "potluck-ctf"
              }
            ],
            "project": "potluck-ctf",
            "scheduling": [
              {
                "automatic_restart": true,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false,
                "provisioning_model": "STANDARD"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/potluck-ctf/zones/europe-west3-b/instances/challenge27-a",
            "service_account": [
              {
                "email": "challenge27-service-account@potluck-ctf.iam.gserviceaccount.com",
                "scopes": [
                  "https://www.googleapis.com/auth/cloud-platform"
                ]
              }
            ],
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "challenge",
              "challenge27",
              "potluckctf"
            ],
            "tags_fingerprint": "Qo-uO_MIceE=",
            "terraform_labels": {
              "challenge": "1"
            },
            "zone": "europe-west3-b"
          },
          "dependencies": [
            "google_compute_network.potluckctf_network",
            "google_compute_subnetwork.potluckctf_challenge_subnet",
            "google_service_account.challenge_service_account"
          ]
        },
        {
          "index_key": "challenge28-a",
          "schema_version": 6,
          "attributes": {
            "allow_stopping_for_update": true,
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "enable_confidential_compute": false,
                    "image": "https://www.googleapis.com/compute/beta/projects/debian-cloud/global/images/debian-11-bullseye-v20231212",
                    "size": 16,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/potluck-ctf/zones/europe-west3-b/disks/challenge28-a"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "AMD Rome",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "effective_labels": {
              "challenge": "1"
            },
            "enable_display": false,
            "id": "projects/potluck-ctf/zones/europe-west3-b/instances/challenge28-a",
            "instance_id": "4075707775570090094",
            "label_fingerprint": "Q_iIQpWMFMc=",
            "labels": {
              "challenge": "1"
            },
            "machine_type": "e2-standard-8",
            "metadata_fingerprint": "sPgbUE6W0-o=",
            "name": "challenge28-a",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "34.89.212.36",
                    "network_tier": "PREMIUM"
                  }
                ],
                "internal_ipv6_prefix_length": 0,
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/potluck-ctf/global/networks/potluckctf-network",
                "network_ip": "10.0.28.2",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/potluck-ctf/regions/europe-west3/subnetworks/potluckctf-challenge28-subnet",
                "subnetwork_project": "potluck-ctf"
              }
            ],
            "project": "potluck-ctf",
            "scheduling": [
              {
                "automatic_restart": true,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false,
                "provisioning_model": "STANDARD"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/potluck-ctf/zones/europe-west3-b/instances/challenge28-a",
            "service_account": [
              {
                "email": "challenge28-service-account@potluck-ctf.iam.gserviceaccount.com",
                "scopes": [
                  "https://www.googleapis.com/auth/cloud-platform"
                ]
              }
            ],
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "challenge",
              "challenge28",
              "potluckctf"
            ],
            "tags_fingerprint": "pQLG64QqkTU=",
            "terraform_labels": {
              "challenge": "1"
            },
            "zone": "europe-west3-b"
          },
          "dependencies": [
            "google_compute_network.potluckctf_network",
            "google_compute_subnetwork.potluckctf_challenge_subnet",
            "google_service_account.challenge_service_account"
          ]
        },
        {
          "index_key": "challenge29-a",
          "schema_version": 6,
          "attributes": {
            "allow_stopping_for_update": true,
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "enable_confidential_compute": false,
                    "image": "https://www.googleapis.com/compute/beta/projects/debian-cloud/global/images/debian-11-bullseye-v20231212",
                    "size": 16,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/potluck-ctf/zones/europe-west3-b/disks/challenge29-a"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Broadwell",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "effective_labels": {
              "challenge": "1"
            },
            "enable_display": false,
            "id": "projects/potluck-ctf/zones/europe-west3-b/instances/challenge29-a",
            "instance_id": "7137291473546320003",
            "label_fingerprint": "Q_iIQpWMFMc=",
            "labels": {
              "challenge": "1"
            },
            "machine_type": "e2-standard-8",
            "metadata_fingerprint": "sPgbUE6W0-o=",
            "name": "challenge29-a",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "35.246.218.162",
                    "network_tier": "PREMIUM"
                  }
                ],
                "internal_ipv6_prefix_length": 0,
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/potluck-ctf/global/networks/potluckctf-network",
                "network_ip": "10.0.29.2",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/potluck-ctf/regions/europe-west3/subnetworks/potluckctf-challenge29-subnet",
                "subnetwork_project": "potluck-ctf"
              }
            ],
            "project": "potluck-ctf",
            "scheduling": [
              {
                "automatic_restart": true,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false,
                "provisioning_model": "STANDARD"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/potluck-ctf/zones/europe-west3-b/instances/challenge29-a",
            "service_account": [
              {
                "email": "challenge29-service-account@potluck-ctf.iam.gserviceaccount.com",
                "scopes": [
                  "https://www.googleapis.com/auth/cloud-platform"
                ]
              }
            ],
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "challenge",
              "challenge29",
              "potluckctf"
            ],
            "tags_fingerprint": "BHnhBvvGCCc=",
            "terraform_labels": {
              "challenge": "1"
            },
            "zone": "europe-west3-b"
          },
          "dependencies": [
            "google_compute_network.potluckctf_network",
            "google_compute_subnetwork.potluckctf_challenge_subnet",
            "google_service_account.challenge_service_account"
          ]
        },
        {
          "index_key": "challenge30-a",
          "schema_version": 6,
          "attributes": {
            "allow_stopping_for_update": true,
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "enable_confidential_compute": false,
                    "image": "https://www.googleapis.com/compute/beta/projects/debian-cloud/global/images/debian-11-bullseye-v20231212",
                    "size": 16,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/potluck-ctf/zones/europe-west3-b/disks/challenge30-a"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Broadwell",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "effective_labels": {
              "challenge": "1"
            },
            "enable_display": false,
            "id": "projects/potluck-ctf/zones/europe-west3-b/instances/challenge30-a",
            "instance_id": "8808596882032142137",
            "label_fingerprint": "Q_iIQpWMFMc=",
            "labels": {
              "challenge": "1"
            },
            "machine_type": "e2-standard-8",
            "metadata_fingerprint": "sPgbUE6W0-o=",
            "name": "challenge30-a",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "34.107.49.247",
                    "network_tier": "PREMIUM"
                  }
                ],
                "internal_ipv6_prefix_length": 0,
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/potluck-ctf/global/networks/potluckctf-network",
                "network_ip": "10.0.30.2",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/potluck-ctf/regions/europe-west3/subnetworks/potluckctf-challenge30-subnet",
                "subnetwork_project": "potluck-ctf"
              }
            ],
            "project": "potluck-ctf",
            "scheduling": [
              {
                "automatic_restart": true,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false,
                "provisioning_model": "STANDARD"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/potluck-ctf/zones/europe-west3-b/instances/challenge30-a",
            "service_account": [
              {
                "email": "challenge30-service-account@potluck-ctf.iam.gserviceaccount.com",
                "scopes": [
                  "https://www.googleapis.com/auth/cloud-platform"
                ]
              }
            ],
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "challenge",
              "challenge30",
              "potluckctf"
            ],
            "tags_fingerprint": "cl6McTJBS1Y=",
            "terraform_labels": {
              "challenge": "1"
            },
            "zone": "europe-west3-b"
          },
          "dependencies": [
            "google_compute_network.potluckctf_network",
            "google_compute_subnetwork.potluckctf_challenge_subnet",
            "google_service_account.challenge_service_account"
          ]
        },
        {
          "index_key": "challenge30-b",
          "schema_version": 6,
          "attributes": {
            "allow_stopping_for_update": true,
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "enable_confidential_compute": false,
                    "image": "https://www.googleapis.com/compute/beta/projects/debian-cloud/global/images/debian-11-bullseye-v20231212",
                    "size": 16,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/potluck-ctf/zones/europe-west3-b/disks/challenge30-b"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Broadwell",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "effective_labels": {
              "challenge": "1"
            },
            "enable_display": false,
            "id": "projects/potluck-ctf/zones/europe-west3-b/instances/challenge30-b",
            "instance_id": "1656648440591119370",
            "label_fingerprint": "Q_iIQpWMFMc=",
            "labels": {
              "challenge": "1"
            },
            "machine_type": "e2-standard-8",
            "metadata_fingerprint": "sPgbUE6W0-o=",
            "name": "challenge30-b",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "34.107.40.20",
                    "network_tier": "PREMIUM"
                  }
                ],
                "internal_ipv6_prefix_length": 0,
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/potluck-ctf/global/networks/potluckctf-network",
                "network_ip": "10.0.30.3",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/potluck-ctf/regions/europe-west3/subnetworks/potluckctf-challenge30-subnet",
                "subnetwork_project": "potluck-ctf"
              }
            ],
            "project": "potluck-ctf",
            "scheduling": [
              {
                "automatic_restart": true,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false,
                "provisioning_model": "STANDARD"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/potluck-ctf/zones/europe-west3-b/instances/challenge30-b",
            "service_account": [
              {
                "email": "challenge30-service-account@potluck-ctf.iam.gserviceaccount.com",
                "scopes": [
                  "https://www.googleapis.com/auth/cloud-platform"
                ]
              }
            ],
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "challenge",
              "challenge30",
              "potluckctf"
            ],
            "tags_fingerprint": "cl6McTJBS1Y=",
            "terraform_labels": {
              "challenge": "1"
            },
            "zone": "europe-west3-b"
          },
          "dependencies": [
            "google_compute_network.potluckctf_network",
            "google_compute_subnetwork.potluckctf_challenge_subnet",
            "google_service_account.challenge_service_account"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "monitor_server",
      "provider": "provider[\"registry.terraform.io/hashicorp/google-beta\"]",
      "instances": [
        {
          "index_key": "monitor-a",
          "schema_version": 6,
          "attributes": {
            "allow_stopping_for_update": true,
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "enable_confidential_compute": false,
                    "image": "https://www.googleapis.com/compute/beta/projects/debian-cloud/global/images/debian-11-bullseye-v20231212",
                    "size": 128,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/potluck-ctf/zones/europe-west3-b/disks/monitor-a"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Broadwell",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "effective_labels": {
              "monitor": "1"
            },
            "enable_display": false,
            "id": "projects/potluck-ctf/zones/europe-west3-b/instances/monitor-a",
            "instance_id": "7138774010358063127",
            "label_fingerprint": "-dTmVl9kWAo=",
            "labels": {
              "monitor": "1"
            },
            "machine_type": "e2-standard-8",
            "metadata_fingerprint": "sPgbUE6W0-o=",
            "name": "monitor-a",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "35.242.254.157",
                    "network_tier": "PREMIUM"
                  }
                ],
                "internal_ipv6_prefix_length": 0,
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/potluck-ctf/global/networks/potluckctf-network",
                "network_ip": "10.0.0.100",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/potluck-ctf/regions/europe-west3/subnetworks/potluckctf-subnet",
                "subnetwork_project": "potluck-ctf"
              }
            ],
            "project": "potluck-ctf",
            "scheduling": [
              {
                "automatic_restart": true,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false,
                "provisioning_model": "STANDARD"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/potluck-ctf/zones/europe-west3-b/instances/monitor-a",
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "monitor",
              "potluckctf"
            ],
            "tags_fingerprint": "fhFgd8ZsNCM=",
            "terraform_labels": {
              "monitor": "1"
            },
            "zone": "europe-west3-b"
          },
          "dependencies": [
            "google_compute_network.potluckctf_network",
            "google_compute_subnetwork.potluckctf_subnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "scoreboard_server",
      "provider": "provider[\"registry.terraform.io/hashicorp/google-beta\"]",
      "instances": [
        {
          "index_key": "scoreboard-a",
          "schema_version": 6,
          "attributes": {
            "allow_stopping_for_update": true,
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "enable_confidential_compute": false,
                    "image": "https://www.googleapis.com/compute/beta/projects/debian-cloud/global/images/debian-11-bullseye-v20231212",
                    "size": 32,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/potluck-ctf/zones/europe-west3-b/disks/scoreboard-a"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Broadwell",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "effective_labels": {
              "scoreboard": "1"
            },
            "enable_display": false,
            "id": "projects/potluck-ctf/zones/europe-west3-b/instances/scoreboard-a",
            "instance_id": "571669401597566999",
            "label_fingerprint": "ehQA31pVJuo=",
            "labels": {
              "scoreboard": "1"
            },
            "machine_type": "e2-standard-8",
            "metadata_fingerprint": "sPgbUE6W0-o=",
            "name": "scoreboard-a",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "34.141.85.165",
                    "network_tier": "PREMIUM"
                  }
                ],
                "internal_ipv6_prefix_length": 0,
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/potluck-ctf/global/networks/potluckctf-network",
                "network_ip": "10.0.0.10",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/potluck-ctf/regions/europe-west3/subnetworks/potluckctf-subnet",
                "subnetwork_project": "potluck-ctf"
              }
            ],
            "project": "potluck-ctf",
            "scheduling": [
              {
                "automatic_restart": true,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false,
                "provisioning_model": "STANDARD"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/potluck-ctf/zones/europe-west3-b/instances/scoreboard-a",
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "potluckctf",
              "scoreboard"
            ],
            "tags_fingerprint": "DcDfDGqkOj8=",
            "terraform_labels": {
              "scoreboard": "1"
            },
            "zone": "europe-west3-b"
          },
          "dependencies": [
            "google_compute_network.potluckctf_network",
            "google_compute_subnetwork.potluckctf_subnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_network",
      "name": "potluckctf_network",
      "provider": "provider[\"registry.terraform.io/hashicorp/google-beta\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_create_subnetworks": false,
            "delete_default_routes_on_create": false,
            "enable_ula_internal_ipv6": false,
            "id": "projects/potluck-ctf/global/networks/potluckctf-network",
            "mtu": 0,
            "name": "potluckctf-network",
            "network_firewall_policy_enforcement_order": "AFTER_CLASSIC_FIREWALL",
            "numeric_id": "2593981957242019876",
            "project": "potluck-ctf",
            "routing_mode": "REGIONAL",
            "self_link": "https://www.googleapis.com/compute/v1/projects/potluck-ctf/global/networks/potluckctf-network"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "potluckctf_challenge_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/google-beta\"]",
      "instances": [
        {
          "index_key": "challenge00",
          "schema_version": 0,
          "attributes": {
            "allow_subnet_cidr_routes_overlap": false,
            "creation_timestamp": "2023-12-26T02:08:37.692-08:00",
            "gateway_address": "10.0.137.1",
            "id": "projects/potluck-ctf/regions/europe-west3/subnetworks/potluckctf-challenge00-subnet",
            "ip_cidr_range": "10.0.137.0/24",
            "name": "potluckctf-challenge00-subnet",
            "network": "https://www.googleapis.com/compute/v1/projects/potluck-ctf/global/networks/potluckctf-network",
            "private_ip_google_access": false,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "potluck-ctf",
            "purpose": "PRIVATE",
            "region": "europe-west3",
            "self_link": "https://www.googleapis.com/compute/v1/projects/potluck-ctf/regions/europe-west3/subnetworks/potluckctf-challenge00-subnet",
            "stack_type": "IPV4_ONLY"
          },
          "dependencies": [
            "google_compute_network.potluckctf_network"
          ]
        },
        {
          "index_key": "challenge01",
          "schema_version": 0,
          "attributes": {
            "allow_subnet_cidr_routes_overlap": false,
            "creation_timestamp": "2023-12-26T02:08:47.480-08:00",
            "gateway_address": "10.0.1.1",
            "id": "projects/potluck-ctf/regions/europe-west3/subnetworks/potluckctf-challenge01-subnet",
            "ip_cidr_range": "10.0.1.0/24",
            "name": "potluckctf-challenge01-subnet",
            "network": "https://www.googleapis.com/compute/v1/projects/potluck-ctf/global/networks/potluckctf-network",
            "private_ip_google_access": false,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "potluck-ctf",
            "purpose": "PRIVATE",
            "region": "europe-west3",
            "self_link": "https://www.googleapis.com/compute/v1/projects/potluck-ctf/regions/europe-west3/subnetworks/potluckctf-challenge01-subnet",
            "stack_type": "IPV4_ONLY"
          },
          "dependencies": [
            "google_compute_network.potluckctf_network"
          ]
        },
        {
          "index_key": "challenge03",
          "schema_version": 0,
          "attributes": {
            "allow_subnet_cidr_routes_overlap": false,
            "creation_timestamp": "2023-12-26T02:08:57.672-08:00",
            "gateway_address": "10.0.3.1",
            "id": "projects/potluck-ctf/regions/europe-west3/subnetworks/potluckctf-challenge03-subnet",
            "ip_cidr_range": "10.0.3.0/24",
            "name": "potluckctf-challenge03-subnet",
            "network": "https://www.googleapis.com/compute/v1/projects/potluck-ctf/global/networks/potluckctf-network",
            "private_ip_google_access": false,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "potluck-ctf",
            "purpose": "PRIVATE",
            "region": "europe-west3",
            "self_link": "https://www.googleapis.com/compute/v1/projects/potluck-ctf/regions/europe-west3/subnetworks/potluckctf-challenge03-subnet",
            "stack_type": "IPV4_ONLY"
          },
          "dependencies": [
            "google_compute_network.potluckctf_network"
          ]
        },
        {
          "index_key": "challenge05",
          "schema_version": 0,
          "attributes": {
            "allow_subnet_cidr_routes_overlap": false,
            "creation_timestamp": "2023-12-26T02:08:13.468-08:00",
            "gateway_address": "10.0.5.1",
            "id": "projects/potluck-ctf/regions/europe-west3/subnetworks/potluckctf-challenge05-subnet",
            "ip_cidr_range": "10.0.5.0/24",
            "name": "potluckctf-challenge05-subnet",
            "network": "https://www.googleapis.com/compute/v1/projects/potluck-ctf/global/networks/potluckctf-network",
            "private_ip_google_access": false,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "potluck-ctf",
            "purpose": "PRIVATE",
            "region": "europe-west3",
            "self_link": "https://www.googleapis.com/compute/v1/projects/potluck-ctf/regions/europe-west3/subnetworks/potluckctf-challenge05-subnet",
            "stack_type": "IPV4_ONLY"
          },
          "dependencies": [
            "google_compute_network.potluckctf_network"
          ]
        },
        {
          "index_key": "challenge06",
          "schema_version": 0,
          "attributes": {
            "allow_subnet_cidr_routes_overlap": false,
            "creation_timestamp": "2023-12-26T02:08:25.765-08:00",
            "gateway_address": "10.0.6.1",
            "id": "projects/potluck-ctf/regions/europe-west3/subnetworks/potluckctf-challenge06-subnet",
            "ip_cidr_range": "10.0.6.0/24",
            "name": "potluckctf-challenge06-subnet",
            "network": "https://www.googleapis.com/compute/v1/projects/potluck-ctf/global/networks/potluckctf-network",
            "private_ip_google_access": false,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "potluck-ctf",
            "purpose": "PRIVATE",
            "region": "europe-west3",
            "self_link": "https://www.googleapis.com/compute/v1/projects/potluck-ctf/regions/europe-west3/subnetworks/potluckctf-challenge06-subnet",
            "stack_type": "IPV4_ONLY"
          },
          "dependencies": [
            "google_compute_network.potluckctf_network"
          ]
        },
        {
          "index_key": "challenge07",
          "schema_version": 0,
          "attributes": {
            "allow_subnet_cidr_routes_overlap": false,
            "creation_timestamp": "2023-12-26T02:08:13.582-08:00",
            "gateway_address": "10.0.7.1",
            "id": "projects/potluck-ctf/regions/europe-west3/subnetworks/potluckctf-challenge07-subnet",
            "ip_cidr_range": "10.0.7.0/24",
            "name": "potluckctf-challenge07-subnet",
            "network": "https://www.googleapis.com/compute/v1/projects/potluck-ctf/global/networks/potluckctf-network",
            "private_ip_google_access": false,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "potluck-ctf",
            "purpose": "PRIVATE",
            "region": "europe-west3",
            "self_link": "https://www.googleapis.com/compute/v1/projects/potluck-ctf/regions/europe-west3/subnetworks/potluckctf-challenge07-subnet",
            "stack_type": "IPV4_ONLY"
          },
          "dependencies": [
            "google_compute_network.potluckctf_network"
          ]
        },
        {
          "index_key": "challenge09",
          "schema_version": 0,
          "attributes": {
            "allow_subnet_cidr_routes_overlap": false,
            "creation_timestamp": "2023-12-26T02:08:35.882-08:00",
            "gateway_address": "10.0.9.1",
            "id": "projects/potluck-ctf/regions/europe-west3/subnetworks/potluckctf-challenge09-subnet",
            "ip_cidr_range": "10.0.9.0/24",
            "name": "potluckctf-challenge09-subnet",
            "network": "https://www.googleapis.com/compute/v1/projects/potluck-ctf/global/networks/potluckctf-network",
            "private_ip_google_access": false,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "potluck-ctf",
            "purpose": "PRIVATE",
            "region": "europe-west3",
            "self_link": "https://www.googleapis.com/compute/v1/projects/potluck-ctf/regions/europe-west3/subnetworks/potluckctf-challenge09-subnet",
            "stack_type": "IPV4_ONLY"
          },
          "dependencies": [
            "google_compute_network.potluckctf_network"
          ]
        },
        {
          "index_key": "challenge11",
          "schema_version": 0,
          "attributes": {
            "allow_subnet_cidr_routes_overlap": false,
            "creation_timestamp": "2023-12-26T02:08:38.200-08:00",
            "gateway_address": "10.0.11.1",
            "id": "projects/potluck-ctf/regions/europe-west3/subnetworks/potluckctf-challenge11-subnet",
            "ip_cidr_range": "10.0.11.0/24",
            "name": "potluckctf-challenge11-subnet",
            "network": "https://www.googleapis.com/compute/v1/projects/potluck-ctf/global/networks/potluckctf-network",
            "private_ip_google_access": false,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "potluck-ctf",
            "purpose": "PRIVATE",
            "region": "europe-west3",
            "self_link": "https://www.googleapis.com/compute/v1/projects/potluck-ctf/regions/europe-west3/subnetworks/potluckctf-challenge11-subnet",
            "stack_type": "IPV4_ONLY"
          },
          "dependencies": [
            "google_compute_network.potluckctf_network"
          ]
        },
        {
          "index_key": "challenge12",
          "schema_version": 0,
          "attributes": {
            "allow_subnet_cidr_routes_overlap": false,
            "creation_timestamp": "2023-12-26T02:08:13.565-08:00",
            "gateway_address": "10.0.12.1",
            "id": "projects/potluck-ctf/regions/europe-west3/subnetworks/potluckctf-challenge12-subnet",
            "ip_cidr_range": "10.0.12.0/24",
            "name": "potluckctf-challenge12-subnet",
            "network": "https://www.googleapis.com/compute/v1/projects/potluck-ctf/global/networks/potluckctf-network",
            "private_ip_google_access": false,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "potluck-ctf",
            "purpose": "PRIVATE",
            "region": "europe-west3",
            "self_link": "https://www.googleapis.com/compute/v1/projects/potluck-ctf/regions/europe-west3/subnetworks/potluckctf-challenge12-subnet",
            "stack_type": "IPV4_ONLY"
          },
          "dependencies": [
            "google_compute_network.potluckctf_network"
          ]
        },
        {
          "index_key": "challenge13",
          "schema_version": 0,
          "attributes": {
            "allow_subnet_cidr_routes_overlap": false,
            "creation_timestamp": "2023-12-26T02:08:26.060-08:00",
            "gateway_address": "10.0.13.1",
            "id": "projects/potluck-ctf/regions/europe-west3/subnetworks/potluckctf-challenge13-subnet",
            "ip_cidr_range": "10.0.13.0/24",
            "name": "potluckctf-challenge13-subnet",
            "network": "https://www.googleapis.com/compute/v1/projects/potluck-ctf/global/networks/potluckctf-network",
            "private_ip_google_access": false,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "potluck-ctf",
            "purpose": "PRIVATE",
            "region": "europe-west3",
            "self_link": "https://www.googleapis.com/compute/v1/projects/potluck-ctf/regions/europe-west3/subnetworks/potluckctf-challenge13-subnet",
            "stack_type": "IPV4_ONLY"
          },
          "dependencies": [
            "google_compute_network.potluckctf_network"
          ]
        },
        {
          "index_key": "challenge15",
          "schema_version": 0,
          "attributes": {
            "allow_subnet_cidr_routes_overlap": false,
            "creation_timestamp": "2023-12-26T02:08:26.372-08:00",
            "gateway_address": "10.0.15.1",
            "id": "projects/potluck-ctf/regions/europe-west3/subnetworks/potluckctf-challenge15-subnet",
            "ip_cidr_range": "10.0.15.0/24",
            "name": "potluckctf-challenge15-subnet",
            "network": "https://www.googleapis.com/compute/v1/projects/potluck-ctf/global/networks/potluckctf-network",
            "private_ip_google_access": false,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "potluck-ctf",
            "purpose": "PRIVATE",
            "region": "europe-west3",
            "self_link": "https://www.googleapis.com/compute/v1/projects/potluck-ctf/regions/europe-west3/subnetworks/potluckctf-challenge15-subnet",
            "stack_type": "IPV4_ONLY"
          },
          "dependencies": [
            "google_compute_network.potluckctf_network"
          ]
        },
        {
          "index_key": "challenge17",
          "schema_version": 0,
          "attributes": {
            "allow_subnet_cidr_routes_overlap": false,
            "creation_timestamp": "2023-12-27T06:59:25.275-08:00",
            "gateway_address": "10.0.17.1",
            "id": "projects/potluck-ctf/regions/europe-west3/subnetworks/potluckctf-challenge17-subnet",
            "ip_cidr_range": "10.0.17.0/24",
            "name": "potluckctf-challenge17-subnet",
            "network": "https://www.googleapis.com/compute/v1/projects/potluck-ctf/global/networks/potluckctf-network",
            "private_ip_google_access": false,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "potluck-ctf",
            "purpose": "PRIVATE",
            "region": "europe-west3",
            "self_link": "https://www.googleapis.com/compute/v1/projects/potluck-ctf/regions/europe-west3/subnetworks/potluckctf-challenge17-subnet",
            "stack_type": "IPV4_ONLY"
          },
          "dependencies": [
            "google_compute_network.potluckctf_network"
          ]
        },
        {
          "index_key": "challenge18",
          "schema_version": 0,
          "attributes": {
            "allow_subnet_cidr_routes_overlap": false,
            "creation_timestamp": "2023-12-26T02:08:35.873-08:00",
            "gateway_address": "10.0.18.1",
            "id": "projects/potluck-ctf/regions/europe-west3/subnetworks/potluckctf-challenge18-subnet",
            "ip_cidr_range": "10.0.18.0/24",
            "name": "potluckctf-challenge18-subnet",
            "network": "https://www.googleapis.com/compute/v1/projects/potluck-ctf/global/networks/potluckctf-network",
            "private_ip_google_access": false,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "potluck-ctf",
            "purpose": "PRIVATE",
            "region": "europe-west3",
            "self_link": "https://www.googleapis.com/compute/v1/projects/potluck-ctf/regions/europe-west3/subnetworks/potluckctf-challenge18-subnet",
            "stack_type": "IPV4_ONLY"
          },
          "dependencies": [
            "google_compute_network.potluckctf_network"
          ]
        },
        {
          "index_key": "challenge19",
          "schema_version": 0,
          "attributes": {
            "allow_subnet_cidr_routes_overlap": false,
            "creation_timestamp": "2023-12-26T02:08:25.171-08:00",
            "gateway_address": "10.0.19.1",
            "id": "projects/potluck-ctf/regions/europe-west3/subnetworks/potluckctf-challenge19-subnet",
            "ip_cidr_range": "10.0.19.0/24",
            "name": "potluckctf-challenge19-subnet",
            "network": "https://www.googleapis.com/compute/v1/projects/potluck-ctf/global/networks/potluckctf-network",
            "private_ip_google_access": false,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "potluck-ctf",
            "purpose": "PRIVATE",
            "region": "europe-west3",
            "self_link": "https://www.googleapis.com/compute/v1/projects/potluck-ctf/regions/europe-west3/subnetworks/potluckctf-challenge19-subnet",
            "stack_type": "IPV4_ONLY"
          },
          "dependencies": [
            "google_compute_network.potluckctf_network"
          ]
        },
        {
          "index_key": "challenge21",
          "schema_version": 0,
          "attributes": {
            "allow_subnet_cidr_routes_overlap": false,
            "creation_timestamp": "2023-12-26T02:08:37.969-08:00",
            "gateway_address": "10.0.21.1",
            "id": "projects/potluck-ctf/regions/europe-west3/subnetworks/potluckctf-challenge21-subnet",
            "ip_cidr_range": "10.0.21.0/24",
            "name": "potluckctf-challenge21-subnet",
            "network": "https://www.googleapis.com/compute/v1/projects/potluck-ctf/global/networks/potluckctf-network",
            "private_ip_google_access": false,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "potluck-ctf",
            "purpose": "PRIVATE",
            "region": "europe-west3",
            "self_link": "https://www.googleapis.com/compute/v1/projects/potluck-ctf/regions/europe-west3/subnetworks/potluckctf-challenge21-subnet",
            "stack_type": "IPV4_ONLY"
          },
          "dependencies": [
            "google_compute_network.potluckctf_network"
          ]
        },
        {
          "index_key": "challenge22",
          "schema_version": 0,
          "attributes": {
            "allow_subnet_cidr_routes_overlap": false,
            "creation_timestamp": "2023-12-26T02:08:47.178-08:00",
            "gateway_address": "10.0.22.1",
            "id": "projects/potluck-ctf/regions/europe-west3/subnetworks/potluckctf-challenge22-subnet",
            "ip_cidr_range": "10.0.22.0/24",
            "name": "potluckctf-challenge22-subnet",
            "network": "https://www.googleapis.com/compute/v1/projects/potluck-ctf/global/networks/potluckctf-network",
            "private_ip_google_access": false,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "potluck-ctf",
            "purpose": "PRIVATE",
            "region": "europe-west3",
            "self_link": "https://www.googleapis.com/compute/v1/projects/potluck-ctf/regions/europe-west3/subnetworks/potluckctf-challenge22-subnet",
            "stack_type": "IPV4_ONLY"
          },
          "dependencies": [
            "google_compute_network.potluckctf_network"
          ]
        },
        {
          "index_key": "challenge24",
          "schema_version": 0,
          "attributes": {
            "allow_subnet_cidr_routes_overlap": false,
            "creation_timestamp": "2023-12-26T02:08:26.178-08:00",
            "gateway_address": "10.0.24.1",
            "id": "projects/potluck-ctf/regions/europe-west3/subnetworks/potluckctf-challenge24-subnet",
            "ip_cidr_range": "10.0.24.0/24",
            "name": "potluckctf-challenge24-subnet",
            "network": "https://www.googleapis.com/compute/v1/projects/potluck-ctf/global/networks/potluckctf-network",
            "private_ip_google_access": false,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "potluck-ctf",
            "purpose": "PRIVATE",
            "region": "europe-west3",
            "self_link": "https://www.googleapis.com/compute/v1/projects/potluck-ctf/regions/europe-west3/subnetworks/potluckctf-challenge24-subnet",
            "stack_type": "IPV4_ONLY"
          },
          "dependencies": [
            "google_compute_network.potluckctf_network"
          ]
        },
        {
          "index_key": "challenge25",
          "schema_version": 0,
          "attributes": {
            "allow_subnet_cidr_routes_overlap": false,
            "creation_timestamp": "2023-12-26T02:08:25.176-08:00",
            "gateway_address": "10.0.25.1",
            "id": "projects/potluck-ctf/regions/europe-west3/subnetworks/potluckctf-challenge25-subnet",
            "ip_cidr_range": "10.0.25.0/24",
            "name": "potluckctf-challenge25-subnet",
            "network": "https://www.googleapis.com/compute/v1/projects/potluck-ctf/global/networks/potluckctf-network",
            "private_ip_google_access": false,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "potluck-ctf",
            "purpose": "PRIVATE",
            "region": "europe-west3",
            "self_link": "https://www.googleapis.com/compute/v1/projects/potluck-ctf/regions/europe-west3/subnetworks/potluckctf-challenge25-subnet",
            "stack_type": "IPV4_ONLY"
          },
          "dependencies": [
            "google_compute_network.potluckctf_network"
          ]
        },
        {
          "index_key": "challenge26",
          "schema_version": 0,
          "attributes": {
            "allow_subnet_cidr_routes_overlap": false,
            "creation_timestamp": "2023-12-26T02:08:25.561-08:00",
            "gateway_address": "10.0.26.1",
            "id": "projects/potluck-ctf/regions/europe-west3/subnetworks/potluckctf-challenge26-subnet",
            "ip_cidr_range": "10.0.26.0/24",
            "name": "potluckctf-challenge26-subnet",
            "network": "https://www.googleapis.com/compute/v1/projects/potluck-ctf/global/networks/potluckctf-network",
            "private_ip_google_access": false,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "potluck-ctf",
            "purpose": "PRIVATE",
            "region": "europe-west3",
            "self_link": "https://www.googleapis.com/compute/v1/projects/potluck-ctf/regions/europe-west3/subnetworks/potluckctf-challenge26-subnet",
            "stack_type": "IPV4_ONLY"
          },
          "dependencies": [
            "google_compute_network.potluckctf_network"
          ]
        },
        {
          "index_key": "challenge27",
          "schema_version": 0,
          "attributes": {
            "allow_subnet_cidr_routes_overlap": false,
            "creation_timestamp": "2023-12-26T02:08:35.860-08:00",
            "gateway_address": "10.0.27.1",
            "id": "projects/potluck-ctf/regions/europe-west3/subnetworks/potluckctf-challenge27-subnet",
            "ip_cidr_range": "10.0.27.0/24",
            "name": "potluckctf-challenge27-subnet",
            "network": "https://www.googleapis.com/compute/v1/projects/potluck-ctf/global/networks/potluckctf-network",
            "private_ip_google_access": false,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "potluck-ctf",
            "purpose": "PRIVATE",
            "region": "europe-west3",
            "self_link": "https://www.googleapis.com/compute/v1/projects/potluck-ctf/regions/europe-west3/subnetworks/potluckctf-challenge27-subnet",
            "stack_type": "IPV4_ONLY"
          },
          "dependencies": [
            "google_compute_network.potluckctf_network"
          ]
        },
        {
          "index_key": "challenge28",
          "schema_version": 0,
          "attributes": {
            "allow_subnet_cidr_routes_overlap": false,
            "creation_timestamp": "2023-12-26T02:08:57.574-08:00",
            "gateway_address": "10.0.28.1",
            "id": "projects/potluck-ctf/regions/europe-west3/subnetworks/potluckctf-challenge28-subnet",
            "ip_cidr_range": "10.0.28.0/24",
            "name": "potluckctf-challenge28-subnet",
            "network": "https://www.googleapis.com/compute/v1/projects/potluck-ctf/global/networks/potluckctf-network",
            "private_ip_google_access": false,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "potluck-ctf",
            "purpose": "PRIVATE",
            "region": "europe-west3",
            "self_link": "https://www.googleapis.com/compute/v1/projects/potluck-ctf/regions/europe-west3/subnetworks/potluckctf-challenge28-subnet",
            "stack_type": "IPV4_ONLY"
          },
          "dependencies": [
            "google_compute_network.potluckctf_network"
          ]
        },
        {
          "index_key": "challenge29",
          "schema_version": 0,
          "attributes": {
            "allow_subnet_cidr_routes_overlap": false,
            "creation_timestamp": "2023-12-26T02:08:37.079-08:00",
            "gateway_address": "10.0.29.1",
            "id": "projects/potluck-ctf/regions/europe-west3/subnetworks/potluckctf-challenge29-subnet",
            "ip_cidr_range": "10.0.29.0/24",
            "name": "potluckctf-challenge29-subnet",
            "network": "https://www.googleapis.com/compute/v1/projects/potluck-ctf/global/networks/potluckctf-network",
            "private_ip_google_access": false,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "potluck-ctf",
            "purpose": "PRIVATE",
            "region": "europe-west3",
            "self_link": "https://www.googleapis.com/compute/v1/projects/potluck-ctf/regions/europe-west3/subnetworks/potluckctf-challenge29-subnet",
            "stack_type": "IPV4_ONLY"
          },
          "dependencies": [
            "google_compute_network.potluckctf_network"
          ]
        },
        {
          "index_key": "challenge30",
          "schema_version": 0,
          "attributes": {
            "allow_subnet_cidr_routes_overlap": false,
            "creation_timestamp": "2023-12-28T16:58:36.669-08:00",
            "gateway_address": "10.0.30.1",
            "id": "projects/potluck-ctf/regions/europe-west3/subnetworks/potluckctf-challenge30-subnet",
            "ip_cidr_range": "10.0.30.0/24",
            "name": "potluckctf-challenge30-subnet",
            "network": "https://www.googleapis.com/compute/v1/projects/potluck-ctf/global/networks/potluckctf-network",
            "private_ip_google_access": false,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "potluck-ctf",
            "purpose": "PRIVATE",
            "region": "europe-west3",
            "self_link": "https://www.googleapis.com/compute/v1/projects/potluck-ctf/regions/europe-west3/subnetworks/potluckctf-challenge30-subnet",
            "stack_type": "IPV4_ONLY"
          },
          "dependencies": [
            "google_compute_network.potluckctf_network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "potluckctf_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/google-beta\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allow_subnet_cidr_routes_overlap": false,
            "creation_timestamp": "2023-12-20T13:38:42.490-08:00",
            "gateway_address": "10.0.0.1",
            "id": "projects/potluck-ctf/regions/europe-west3/subnetworks/potluckctf-subnet",
            "ip_cidr_range": "10.0.0.0/24",
            "name": "potluckctf-subnet",
            "network": "https://www.googleapis.com/compute/v1/projects/potluck-ctf/global/networks/potluckctf-network",
            "private_ip_google_access": false,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "potluck-ctf",
            "purpose": "PRIVATE",
            "region": "europe-west3",
            "self_link": "https://www.googleapis.com/compute/v1/projects/potluck-ctf/regions/europe-west3/subnetworks/potluckctf-subnet",
            "stack_type": "IPV4_ONLY"
          },
          "dependencies": [
            "google_compute_network.potluckctf_network"
          ]
        }
      ]
    }
  ]
}